--- a/translation/03_第三章.md
+++ b/translation/03_第三章.md
@@ -2,116 +2,97 @@
 
 **前章回顾**
 
-You should have now gained hands-on experience with your system, the syntax of the language, error messages, and program development—from beginning to end. Most programming projects in the early chapters of this textbook are instances of the IPO algorithmic pattern. You should now be able to put these three steps in the proper order and understand the ramifications of omitting one or mixing up the order.
-
-经过之前的学习，我们现在对自己的系统、这门语言的语法、报错信息及其程序开发，所有的这一切从头到尾都应该已经有了一个直观认知了。另外，本书之前章节中的大部分编程项目实施的都是IPO这个算法模式，相信读者现在应该可以在实践中按照正常的顺序安排这三个步骤，并能理解省略其中某个步骤或以某种混合顺序执行的情况了。
+我们现在应该已经在自己的系统中亲身体验了这门语言的语法、报错信息及其程序开发从头到尾的过程。而且，本书前几章中的大部分编程项目实施的都是IPO这个算法模式，相信读者现在应该也可以在实践中按照正常的顺序安排这三个步骤，并能理解省略其中某个步骤或以某种混合顺序执行的情况了。
 
 **本章提要**
 
-Software developers often use existing software, a practice that saves time and money. Th is chapter introduces one way to reuse existing software. Programmers begin with a substantial base of tested software. You will learn how to use existing functions by reading function headings and to determine what the functions do by reading their pre- and postconditions—the contracts for using those functions. The chapter ends with a review of the categories of errors you will probably have encountered. After studying this chapter, you will be able to
+为了节省时间和资金，软件开发者通常会选择利用现有的软件来完成他们的工作。在本章，我们将介绍重用现有软件的其中一种方式，程序员们通常会将这些经过大量测试的软件作为自身工作的为起点。我们将学习如何通过阅读函数标题来了解现有函数的用法，并通过阅读这些函数用法中的前置和后置条件来确定它们的功能。在本章的最后，我们还会列出一些你可能会遇到的错误种类。我们希望在完成本章的学习之后，你将：
 
-- evaluate some mathematical and trigonometric functions
-- use arguments in function calls
-- appreciate why programmers divide software into functions
-- read function headings so you can use existing functions
+* 学会使用一些数学函数和三角函数来进行求值运算。
+* 学会在调用函数时使用参数。
+* 理解为什么程序员们要将软件划分成一系列函数。
+* 学会通过阅读函数标题来了解现有函数的用法。
 
-## 3.1 cmath FUNCTIONS
+## 3.1 `cmath`系列函数
 
-C++ defines a large collection of mathematical and trigonometric functions that may be used with doubles. Here are two:
+C++为我们定义了大量可用于双精度浮点运算的数学函数和三角函数。下面是其中的两个：
 
-> sqrt(x) // Return the square root of x pow(x,y) // Return x to the yth
-> power
->
-> Th ese functions are *called* by specifying the name of the function,
-> followed by the appropriate number and type of *arguments* within the
-> parentheses. Here is one general form to call certain functions.
->
-> 55
+```C++
+sqrt(x) // Return the square root of x
+pow(x,y) // Return x to the yth power
+```
 
-General Form 3.1 *Function call*
+如你所见，这些函数的*调用*都是通过指定函数名称，并紧随其后的括号中加上指定数量和类型的*参数*来执行的。这样我们就得到了一般函数调用的通用格式：
 
-> function-name(*arguments*)
->
-> Th e *function-name* is a previously declared identifi er representing
-> a function name. Th e *arguments* represent a set of zero or more
-> expressions separated by commas. In the following function call, the
-> function name is sqrt (square root) and the argument is 81.0:
->
-> sqrt(81.0) // An example of a function call
->
-> Functions may have zero, one, or even more arguments. Although most
-> math functions require exactly one argument, the pow function requires
-> exactly two arguments. In the following function call, the function
-> name is pow (for power), the arguments are base and power, and the
-> function call pow(base, power) is replaced with base^power^:
->
-> double base = 2.0; double power = 3.0; cout &lt;&lt; pow(base, power);
-> // Output: 8.0
->
-> Any argument used in a function call must be an expression from an
-> acceptable class. For example, the function call sqrt("Bobbie")
-> results in an error because the argument is not one of the numeric
-> classes.
->
-> Th e function must also be supplied with reasonable arguments. For
-> example, the function call sqrt(-4.0) could be a problem because -4.0
-> is not in the domain of sqrt. Th e square root function is not defi
-> ned for negative numeric values. Th e sqrt function operates correctly
-> only if certain conditions are met. For sqrt, the argument must be
-> greater than or equal to 0.0. Here are some mathematical and
-> trigonometric functions available when you include the cmath function
-> library.
->
-> **A Partial List of** cmath **Functions.** *Note:* double *before the
-> function name is the return type*
+**通用格式 3.1**：*函数调用*
 
-  **Function **                      **What it Returns **   **Example Call **   **Result**
-  ---------------------------------- ---------------------- ------------------- ------------
-  double ceil(double x)              Smallest integer ≥ x   ceil(2.1)           3.0
-  double cos(double x)               Cosine of x radians    cos(1.0)            0.5403
-  double fabs(double x)              Absolute value of x    fabs(-1.5)          1.5
-  double oor(double x)               Largest integer ≤ x    oor(2.9)            2.0
-  double pow(double x,               x^y^                   pow(2, 4)           16.0
-  > double y) double sin(double x)   Sine of x radians      sin(1.0)            0.84147
-  double sqrt(double x)              Square root of x       sqrt(4.0)           2.0
+function-name(*arguments*)
 
-3.2: Problem Solving with cmath Functions
+在这里，*function-name*是一个已被声明的标识符，它代表的是目标函数的名标。而*arguments*则通常是一组由逗号分隔的零个或多个表达式。譬如在下面这个函数调用中，函数的名称是`sqrt`（即平方根），它的参数为`81.0`：
 
-> With \#include &lt;cmath&gt; at the “top” of the program near
-> \#include &lt;iostream&gt;, the programmer can successfully compile a
-> program with calls to the functions declared in cmath. Th is means
-> that the following program compiles successfully:
->
-> // Show some mathematical functions available from cmath
->
-> \#include &lt;cmath&gt; // For fabs, ceil, oor, and pow
->
-> \#include &lt;iostream&gt; // For cout using namespace std;
->
-> int main() { double x = -2.1;
->
-> cout &lt;&lt; "fabs(-2.1): " &lt;&lt; fabs(x) &lt;&lt; endl &lt;&lt;
-> "ceil(-2.1): " &lt;&lt; ceil(x) &lt;&lt; endl
->
-> &lt;&lt; " oor(-2.1): " &lt;&lt; oor(x) &lt;&lt; endl &lt;&lt;
-> "pow(-2.1, 2.0): " &lt;&lt; pow(x, 2.0) &lt;&lt; endl; return 0; }
->
-> Output
->
-> fabs(-2.1): 2.1 ceil(-2.1): -2 oor(-2.1): -3 pow(-2.1, 2.0): 4.41
->
-> It should be noted that integer expressions may also be used as
-> arguments to cmath functions. As with assignment, the integer value
-> will be promoted to a double. So sqrt(4) returns the same result as
-> sqrt(4.0) without error.
+```C++
+sqrt(81.0) // An example of a function call
+```
 
-SELF-CHECK
+Functions may have zero, one, or even more arguments. Although most math functions require exactly one argument, the pow function requires exactly two arguments. In the following function call, the function name is pow (for power), the arguments are base and power, and the function call pow(base, power) is replaced with ${base}^{power}$:
+
+```C++
+double base = 2.0;
+double power = 3.0;
+cout << pow(base, power); // Output: 8.0
+```
+
+Any argument used in a function call must be an expression from an acceptable class. For example, the function call sqrt("Bobbie") results in an error because the argument is not one of the numeric classes.
+
+The function must also be supplied with reasonable arguments. For example, the function call sqrt(-4.0) could be a problem because -4.0 is not in the domain of sqrt. Th e square root function is not defined for negative numeric values. The sqrt function operates correctly only if certain conditions are met. For sqrt, the argument must be greater than or equal to 0.0. Here are some mathematical and trigonometric functions available when you include the cmath function library.
+
+ **A Partial List of `cmath` Functions.** *Note:* double *before the function name is the return type*
+
+| Function | What it Returns | Example Call | Result |
+|----------|-----------------|--------------|--------|
+| double ceil(double x) | Smallest integer ≥ x | ceil(2.1) | 3.0 |
+| double cos(double x)  | Cosine of x radians | cos(1.0) | 0.5403 |
+| double fabs(double x) | Absolute value of x | fabs(-1.5) | 1.5 |
+| double oor(double x)  | Largest integer ≤ x | oor(2.9) | 2.0 |
+| double pow(double x, double y) | $x^y$ | pow(2, 4) | 16.0 |
+| double sin(double x) | Sine of x radians | sin(1.0) | 0.84147 |
+| double sqrt(double x) | Square root of x | sqrt(4.0) | 2.0 |
+
+With `#include <cmath>` at the “top” of the program near `#include <iostream>`, the programmer can successfully compile a program with calls to the functions declared in cmath. This means that the following program compiles successfully:
+
+```C++
+// Show some mathematical functions available from cmath
+#include <cmath>        // For fabs, ceil, floor, and pow
+#include <iostream>     // For cout using namespace std;
+
+int main() {
+    double x = -2.1;
+    cout << "fabs(-2.1): " << fabs(x) << endl
+         << "ceil(-2.1): " << ceil(x) << endl
+         << "floor(-2.1): " << floor(x) << endl
+         << "pow(-2.1, 2.0): " << pow(x, 2.0) << endl;
+    return 0;
+}
+```
+
+**Output**
+
+```shell
+fabs(-2.1): 2.1
+ceil(-2.1): -2
+floor(-2.1): -3
+pow(-2.1, 2.0): 4.41
+```
+
+It should be noted that integer expressions may also be used as arguments to cmath functions. As with assignment, the integer value will be promoted to a double. So sqrt(4) returns the same result as sqrt(4.0) without error.
+
+**SELF-CHECK**
 
 3-1 Evaluate pow(4.0, 3.0)
 
 3-2 Evaluate pow(3.0, 4.0)
 
-3-3 Evaluate oor(1.6 + 0.5)
+3-3 Evaluate floor(1.6 + 0.5)
 
 3-4 Evaluate ceil(1.6 - 0.5)
 
@@ -119,98 +100,62 @@ SELF-CHECK
 
 3-6 Evaluate sqrt(16.0)
 
-3.2 PROBLEM SOLVING WITH cmath FUNCTIONS
+## 3.2 PROBLEM SOLVING WITH cmath FUNCTIONS
 
 > *Problem:* Write a program that rounds a number to a specifi c number
 > of decimal places. For example, 3.4589 rounded to two decimal places
 > should be 3.46 and 3.4589 rounded to one decimal place should be 3.5.
 
-3.2.1 ANALYSIS
+### 3.2.1 ANALYSIS
 
-> Th e analysis/design/implementation software development strategy
-> begins with these analysis activities:
+The analysis/design/implementation software development strategy begins with these analysis activities:
 
-1.  Read and understand the problem.
+1. Read and understand the problem.
+2. Decide what object(s) represent the answer—the output.
+3. Decide what object(s) the user must enter to get the answer—the input.
+4. Write test cases (two were given above).
 
-2.  Decide what object(s) represent the answer—the output.
+### 3.2.2 DESIGN
 
-3.  Decide what object(s) the user must enter to get the
-    > answer—the input.
-
-4.  Write test cases (two were given above).
-
-3.2.2 DESIGN
-
-> Th e deliverable from this design phase is the algorithm. A pseudocode
-> algorithm can be developed with the help of the Input/Process/Output
-> pattern. Th at pattern is repeated here for your convenience:
+The deliverable from this design phase is the algorithm. A pseudocode algorithm can be developed with the help of the Input/Process/Output pattern. Th at pattern is repeated here for your convenience:
 
 **Pattern:** Input/Process/Output (IPO)
 
-> **Problem:** Th e program requires input from the user in order to
-> compute and display the desired information.
+**Problem:** The program requires input from the user in order to compute and display the desired information.
 
-**Outline:** 1. Obtain the input data.
+**Outline:**
 
-2.  Process the data in some meaningful way.
-
-3.  Output the results.
+1. Obtain the input data.
+2. Process the data in some meaningful way.
+3. Output the results.
 
 **Example:** See the problem of rounding x to n decimals that follows.
 
-> Th e Input/Process/Output pattern helps guide placement of the
-> appropriate activities in the proper order. Th e algorithm represents
-> the general design—an outline of the solution. Adding two usages of
-> the Prompt then Input pattern and a more detailed algorithm might now
-> look like this:
+The Input/Process/Output pattern helps guide placement of the appropriate activities in the proper order. Th e algorithm represents the general design—an outline of the solution. Adding two usages of the Prompt then Input pattern and a more detailed algorithm might now look like this:
 
-1.  Prompt for the number to round (call it x).
+1. Prompt for the number to round (call it x).
+2. Input x.
+3. Prompt for the number of decimal places (call it n).
+4. Input n.
+5. Round x to n decimals.
+6. Display the modifi ed state of x.
 
-2.  Input x.
+Steps 1, 2, 3, 4, and 6 have straightforward C++ implementations. They can be implemented as input and/or output statements. However, the details of step 5, “Round x to n decimals,” are not present. Step 5 needs refi nement. With the rest of the problem out of the way, you can focus on the more diffi cult process of rounding x to n decimals. A solution is a bit tricky, so one method is provided.
 
-3.  Prompt for the number of decimal places (call it n).
+To round a number x to n decimal places, fi rst multiply x by 10^n^. Then add 0.5 to the new state of x. Th en store oor(x) in x. Finally, divide x by 10^n^. Th e refined algorithm adds this fourstep refinement:
 
-4.  Input n.
+1. Prompt for x, the number to round.
+2. Input x.
+3. Prompt for n, which is the number of decimal places.
+4. Input n.
+5. Round x to n decimals like this:
+   * a. Let x become x \* 10^n^.
+   * b. Add 0.5 to x.
+   * c. Let x become oor(x).
+   * d. Let x become x divided by 10^n^.
+6. Display the modifi ed state of x.
 
-5.  Round x to n decimals.
-
-6.  Display the modifi ed state of x.
-
-> Steps 1, 2, 3, 4, and 6 have straightforward C++ implementations. Th
-> ey can be implemented as input and/or output statements. However, the
-> details of step 5, “Round x to n decimals,” are not present. Step 5
-> needs refi nement. With the rest of the problem out of the way, you
-> can focus on the more diffi cult process of rounding x to n decimals.
-> A solution is a bit tricky, so one method is provided.
-
-3.2: Problem Solving with cmath Functions
-
-> To round a number x to n decimal places, fi rst multiply x by 10^n^.
-> Th en add 0.5 to the new state of x. Th en store oor(x) in x. Finally,
-> divide x by 10^n^. Th e refi ned algorithm adds this fourstep refi
-> nement:
-
-1.  Prompt for x, the number to round.
-
-2.  Input x.
-
-3.  Prompt for n, which is the number of decimal places.
-
-4.  Input n.
-
-5.  Round x to n decimals like this:
-
-    a.  Let x become x \* 10^n^.
-
-    b.  Add 0.5 to x.
-
-    c.  Let x become oor(x).
-
-    d.  Let x become x divided by 10^n^.
-
-6.  Display the modifi ed state of x.
-
-Th e following trace of program execution simulates what will happen to
+The following trace of program execution simulates what will happen to
 x when it starts at
 
   -----------------------------------------------------------
@@ -262,7 +207,7 @@ SELF-CHECK
 >
 > // Round a given number to a speci c number of decimal places
 >
-> \#include &lt;iostream&gt; // For cin and cout \#include &lt;cmath&gt;
+> \#include <iostream> // For cin and cout \#include <cmath>
 > // For pow(10, n) and oor(x) using namespace std;
 >
 > int main() {
@@ -272,15 +217,15 @@ SELF-CHECK
 
 // Algorithm step number:
 
-> // Input cout &lt;&lt; "Enter number to round : "; // 1. cin &gt;&gt;
-> x; // 2. cout &lt;&lt; "Enter number of decimal places : " ; // 3. cin
-> &gt;&gt; n; // 4.
+> // Input cout << "Enter number to round : "; // 1. cin >>
+> x; // 2. cout << "Enter number of decimal places : " ; // 3. cin
+> >> n; // 4.
 >
 > // Process (Round x to n decimals) x = x \* pow(10, n); // 5a. x = x +
 > 0.5; // b. x = oor(x); // c. x = x / pow(10, n); // d.
 >
-> // Output (Display the modi ed state of x) cout &lt;&lt; "Rounded
-> number : " &lt;&lt; x &lt;&lt; endl; // 6.
+> // Output (Display the modi ed state of x) cout << "Rounded
+> number : " << x << endl; // 6.
 >
 > return 0; }
 >
@@ -342,7 +287,7 @@ for n?
 >
 > double sqrt(double x)
 >
-> // precondition: x is not negative (x &gt;= 0)
+> // precondition: x is not negative (x >= 0)
 >
 > // postcondition: Square root of x replaces the function call
 >
@@ -369,7 +314,7 @@ for n?
 >
 > // precondition: Argument must be convertible to a double
 >
-> // postcondition: Return the smallest integer &gt;= x
+> // postcondition: Return the smallest integer >= x
 >
 > However, this information is implied in the parameter declaration. Th
 > e compiler detects improper argument. From now on, such function
@@ -378,13 +323,13 @@ for n?
 > Th e compiler does not detect preconditions. For example, it is
 > syntactically correct to have a program with this:
 >
-> cout &lt;&lt; sqrt(-1.0); // Return depends on the system in use
+> cout << sqrt(-1.0); // Return depends on the system in use
 >
 > From now on, the label for preconditions will be abbreviated as pre:
 > and for postconditions as post:. Th e same function (ceil) may now be
 > documented as follows:
 >
-> double ceil(double x) // post: Return the smallest integer &gt;= x
+> double ceil(double x) // post: Return the smallest integer >= x
 >
 > It should be noted that the use of pre: and post: after the function
 > headings is not required. Diff erent people document functions in
@@ -468,7 +413,7 @@ General Form 3.3 *Value Parameter*
 >
 > double oor(double x)
 >
-> // post: Returns the largest integer &lt;= x
+> // post: Returns the largest integer <= x
 >
 > Th e return type is double. Th is means that a double replaces any
 > valid call to oor. Th erefore, the function call can be used wherever
@@ -484,8 +429,8 @@ double x; x = oor(5.55555); // This assignment is okay However, these
 function calls are invalid:
 
 > string s; s = oor(5.5555); // Error: oor doesn't return a string cout
-> &lt;&lt; oor(1.0, 2.0); // Error: too many arguments cout &lt;&lt;
-> oor("wrong type"); // Error: wrong type argument cout &lt;&lt; oor();
+> << oor(1.0, 2.0); // Error: too many arguments cout <<
+> oor("wrong type"); // Error: wrong type argument cout << oor();
 > // Error: too few arguments
 
 SELF-CHECK
@@ -667,15 +612,15 @@ c.  number of arguments f. class of third argument
 > the standard C++ library has free functions that can be used in an
 > end-of-chapter programming project: min, max, and abs.
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > int main() {
 >
-> cout &lt;&lt; min(5, 7) &lt;&lt; endl; cout &lt;&lt; min(5.5, 7.7)
-> &lt;&lt; endl;
+> cout << min(5, 7) << endl; cout << min(5.5, 7.7)
+> << endl;
 >
-> cout &lt;&lt; max(5, 7) &lt;&lt; endl; cout &lt;&lt; max(5.5, 7.7)
-> &lt;&lt; endl; cout &lt;&lt; abs(5 - 7) &lt;&lt; endl;
+> cout << max(5, 7) << endl; cout << max(5.5, 7.7)
+> << endl; cout << abs(5 - 7) << endl;
 >
 > return 0;
 >
@@ -700,7 +645,7 @@ c.  number of arguments f. class of third argument
 > should have char parameters and return types because they convert
 > characters to their upper or lower case equivalents. Consider the
 > function heading for the free function islower when you
-> \#include&lt;cctype&gt; to have access to its set of functions to
+> \#include<cctype> to have access to its set of functions to
 > classify and transform individual characters.
 >
 > int islower(int c);
@@ -714,18 +659,18 @@ c.  number of arguments f. class of third argument
 > Arithmetic operations can have a mix of integers and character
 > operands.
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > int main() {
 >
 > int anInt = 'A'; // 'A' equals 65 char aChar = 67; // 67 equals 'C'
 >
-> cout &lt;&lt; "anInt: " &lt;&lt; anInt &lt;&lt; endl; cout &lt;&lt;
-> "aChar: " &lt;&lt; aChar &lt;&lt; endl;
+> cout << "anInt: " << anInt << endl; cout <<
+> "aChar: " << aChar << endl;
 >
-> cout &lt;&lt; "aChar + anInt: " &lt;&lt; (aChar + anInt) &lt;&lt;
-> endl; cout &lt;&lt; "anInt % aChar: " &lt;&lt; (anInt % aChar - 2)
-> &lt;&lt; endl;
+> cout << "aChar + anInt: " << (aChar + anInt) <<
+> endl; cout << "anInt % aChar: " << (anInt % aChar - 2)
+> << endl;
 >
 > return 0; }
 >
@@ -736,13 +681,13 @@ c.  number of arguments f. class of third argument
 More confusion may occur because C++ considers true to be 1 and false to
 be 0.
 
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > int main() {
 >
 > bool aBool = 1; // C++ allows assignment of int to bool int
-> anotherBool = false; // and a bool literal to an int cout &lt;&lt;
-> aBool &lt;&lt; " " &lt;&lt; anotherBool &lt;&lt; endl;
+> anotherBool = false; // and a bool literal to an int cout <<
+> aBool << " " << anotherBool << endl;
 >
 > return 0; }
 >
@@ -754,37 +699,37 @@ be 0.
 >
 > If you need to classify if a char is an alphabetic letter like “A” or
 > “a”, or a digit such as “9” or “3”, you can use one of the free
-> functions from &lt;cctype&gt;. Th is program shows three more cctype
+> functions from <cctype>. Th is program shows three more cctype
 > functions:
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;cctype&gt; // For isalpha isblank isdigit using
+> \#include <cctype> // For isalpha isblank isdigit using
 > namespace std;
 >
 > int main() { char ch = 'a';
 >
-> cout &lt;&lt; "isalpha('" &lt;&lt; ch &lt;&lt; "')? " &lt;&lt;
-> isalpha(ch) &lt;&lt; endl; ch = '?';
+> cout << "isalpha('" << ch << "')? " <<
+> isalpha(ch) << endl; ch = '?';
 >
-> cout &lt;&lt; "isalpha('" &lt;&lt; ch &lt;&lt; "')? " &lt;&lt;
-> isalpha(ch) &lt;&lt; endl;
+> cout << "isalpha('" << ch << "')? " <<
+> isalpha(ch) << endl;
 >
 > ch = ' ';
 >
-> cout &lt;&lt; "isblank('" &lt;&lt; ch &lt;&lt; "')? " &lt;&lt;
-> isblank(ch) &lt;&lt; endl; ch = 'N';
+> cout << "isblank('" << ch << "')? " <<
+> isblank(ch) << endl; ch = 'N';
 >
-> cout &lt;&lt; "isblank('" &lt;&lt; ch &lt;&lt; "')? " &lt;&lt;
-> isblank(ch) &lt;&lt; endl;
+> cout << "isblank('" << ch << "')? " <<
+> isblank(ch) << endl;
 >
 > ch = 'P'; // Oh, not zero
 >
-> cout &lt;&lt; "isdigit('" &lt;&lt; ch &lt;&lt; "')? " &lt;&lt;
-> isdigit(ch) &lt;&lt; endl; ch = '5';
+> cout << "isdigit('" << ch << "')? " <<
+> isdigit(ch) << endl; ch = '5';
 >
-> cout &lt;&lt; "isdigit('" &lt;&lt; ch &lt;&lt; "')? " &lt;&lt;
-> isdigit(ch) &lt;&lt; endl;
+> cout << "isdigit('" << ch << "')? " <<
+> isdigit(ch) << endl;
 >
 > return 0;
 >
@@ -800,16 +745,16 @@ isdigit('P')? 0 isdigit('5')? 1
 > int instead of char, the functions are cast to char with the code
 > (char). Otherwise the output from this program would have been 88 97.
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;cctype&gt; // For toupper and tolower using namespace
+> \#include <cctype> // For toupper and tolower using namespace
 > std;
 >
 > int main() { char lower = 't'; char upper = 'A';
 >
-> // (char) makes sure we the character, not the int cout &lt;&lt;
-> (char)toupper(lower) &lt;&lt; endl; // Cast required cout &lt;&lt;
-> (char)tolower(upper) &lt;&lt; endl; // to see chars
+> // (char) makes sure we the character, not the int cout <<
+> (char)toupper(lower) << endl; // Cast required cout <<
+> (char)tolower(upper) << endl; // to see chars
 >
 > return 0; }
 >
@@ -827,8 +772,8 @@ CHAPTER SUMMARY
     > these details are necessary for implementation of even the
     > simplest program.
 
--   \#include&lt;cmath&gt; provides access to many mathematical and
-    > trigonometric functions. \#include&lt;cctype&gt; provides access
+-   \#include<cmath> provides access to many mathematical and
+    > trigonometric functions. \#include<cctype> provides access
     > to a set of functions that classify and transform
     > individual characters.
 
@@ -921,7 +866,7 @@ EXERCISES
 >
 > // If the value of y is 0.0, fmod returns Not a Number.
 >
-> // Header required: &lt;cmath&gt;
+> // Header required: <cmath>
 
 1.  Write the values returned from each of the six function calls in
     > your answer to the preceding question.
@@ -948,23 +893,23 @@ Programming Projects
 
 > char aChar = true; // assign 1
 >
-> cout &lt;&lt; "&gt;" &lt;&lt; aChar &lt;&lt; "&lt;" &lt;&lt; endl; //
-> Output: &gt;&lt;
+> cout << ">" << aChar << "<" << endl; //
+> Output: ><
 
 1.  If you do not have the line using namespace std; you will have to
     > prepend std:: before every occurrence of the cmath function
     > you use.
 
-> \#include &lt;iostream&gt; // For cout
+> \#include <iostream> // For cout
 >
-> \#include &lt;cmath&gt; // for ceil and oor
+> \#include <cmath> // for ceil and oor
 >
 > // using namespace std; Without this, prepend with std::
 >
 > int main() {
 >
-> std::cout &lt;&lt; std::ceil(5.99) &lt;&lt; std::endl; // 6 std::cout
-> &lt;&lt; std:: oor(5.99) &lt;&lt; std::endl; // 5 }
+> std::cout << std::ceil(5.99) << std::endl; // 6 std::cout
+> << std:: oor(5.99) << std::endl; // 5 }
 
 **PROGRAMMING PROJECTS**
 
