--- a/translation/04_第四章.md
+++ b/translation/04_第四章.md
@@ -75,20 +75,20 @@ Example of returning a value back to the calling code:
 > called—the entire function f is located before the call to it from
 > main.
 >
-> \#include &lt;iostream&gt; // For cout
+> \#include <iostream> // For cout
 >
-> \#include &lt;cmath&gt; // For pow using namespace std;
+> \#include <cmath> // For pow using namespace std;
 >
 > double f(double x) { // post: Return 2 \* x \* x - 1 double result;
 > result = 2 \* pow(x, 2) - 1.0; return result; }
 >
-> int main() { double x, y; cout &lt;&lt; "Input x: "; cin &gt;&gt; x;
+> int main() { double x, y; cout << "Input x: "; cin >> x;
 >
 > // Call function f:
 >
 > y = f(x);
 >
-> cout &lt;&lt; "f(" &lt;&lt; x &lt;&lt; ") = " &lt;&lt; y &lt;&lt;
+> cout << "f(" << x << ") = " << y <<
 > endl; return 0;
 >
 > }
@@ -116,12 +116,12 @@ SELF-CHECK
 >
 > // Call serviceCharge to determine a bank debit
 >
-> \#include &lt;iostream&gt; using namespace std; const double
+> \#include <iostream> using namespace std; const double
 > MONTHLY\_FEE = 5.00;
 >
 > double serviceCharge(int checks, int ATMs) {
 >
-> // pre: checks &gt;= 0 and ATM &gt;= 0
+> // pre: checks >= 0 and ATM >= 0
 >
 > // post: Return a banking fee based on local rules double result;
 >
@@ -135,9 +135,9 @@ SELF-CHECK
 >
 > // 1. Input
 >
-> cout &lt;&lt; "Checks this month? "; cin &gt;&gt; checks;
+> cout << "Checks this month? "; cin >> checks;
 >
-> cout &lt;&lt; "ATMs this month? "; cin &gt;&gt; ATMs;
+> cout << "ATMs this month? "; cin >> ATMs;
 >
 > // 2. Process
 >
@@ -145,7 +145,7 @@ SELF-CHECK
 >
 > // 3. Output
 >
-> cout &lt;&lt; "Fee: " &lt;&lt; fee &lt;&lt; endl;
+> cout << "Fee: " << fee << endl;
 >
 > return 0; }
 >
@@ -201,12 +201,12 @@ SELF-CHECK
 
 > // The main function makes several calls to test a new function
 >
-> \#include &lt;iostream&gt; using namespace std; const double
+> \#include <iostream> using namespace std; const double
 > MONTHLY\_FEE = 5.00;
 >
 > double serviceCharge(int checks, int ATMs) {
 >
-> // pre: checks &gt;= 0 and ATM &gt;= 0
+> // pre: checks >= 0 and ATM >= 0
 >
 > // post: Return a banking fee based on local rules double result;
 >
@@ -217,10 +217,10 @@ SELF-CHECK
 >
 > // Test drive serviceCharge // Sample problems:
 >
-> cout &lt;&lt; serviceCharge(0, 0) &lt;&lt; endl; // 5.0 cout &lt;&lt;
-> serviceCharge(1, 0) &lt;&lt; endl; // 5.25 cout &lt;&lt;
-> serviceCharge(0, 1) &lt;&lt; endl; // 5.1 cout &lt;&lt;
-> serviceCharge(1, 1) &lt;&lt; endl; // 5.35 return 0; }
+> cout << serviceCharge(0, 0) << endl; // 5.0 cout <<
+> serviceCharge(1, 0) << endl; // 5.25 cout <<
+> serviceCharge(0, 1) << endl; // 5.1 cout <<
+> serviceCharge(1, 1) << endl; // 5.35 return 0; }
 >
 > Output
 >
@@ -245,7 +245,7 @@ SELF-CHECK
 >
 > double serviceCharge(int checks, int ATMs) {
 >
-> // pre: checks &gt;= 0 and ATM &gt;= 0
+> // pre: checks >= 0 and ATM >= 0
 >
 > // post: Return a banking fee based on local rules return 0.25 \*
 > checks + 0.10 \* ATMs + MONTHLY\_FEE; }
@@ -409,9 +409,9 @@ Output: Return the result
 >
 > // Call distance four times
 >
-> \#include &lt;iostream&gt; // For cout
+> \#include <iostream> // For cout
 >
-> \#include &lt;cmath&gt; // For sqrt and pow using namespace std;
+> \#include <cmath> // For sqrt and pow using namespace std;
 >
 > double distance(double x1, double y1, double x2, double y2) {
 >
@@ -423,19 +423,19 @@ Output: Return the result
 >
 > int main() {
 >
-> // Test drive the distance function cout &lt;&lt; "(1.0, 1.0) (2.0,
+> // Test drive the distance function cout << "(1.0, 1.0) (2.0,
 > 2.0): "
 >
-> &lt;&lt; distance(1.0, 1.0, 2.0, 2.0) &lt;&lt; endl; cout &lt;&lt;
+> << distance(1.0, 1.0, 2.0, 2.0) << endl; cout <<
 > "(0.0, 0.0) (3.0, 4.0): "
 >
-> &lt;&lt; distance(0.0, 0.0, 3.0, 4.0) &lt;&lt; endl; cout &lt;&lt;
+> << distance(0.0, 0.0, 3.0, 4.0) << endl; cout <<
 > "(-5.7,2.5) (3.3,-4.7): "
 >
-> &lt;&lt; distance(-5.7,2.5, 3.3,-4.7) &lt;&lt; endl; cout &lt;&lt;
+> << distance(-5.7,2.5, 3.3,-4.7) << endl; cout <<
 > "(0.0, 0.0) (0.0, 0.0): "
 >
-> &lt;&lt; distance(0.0, 0.0, 0.0, 0.0) &lt;&lt; endl; return 0; }
+> << distance(0.0, 0.0, 0.0, 0.0) << endl; return 0; }
 >
 > Output
 >
@@ -497,16 +497,16 @@ It is recommended that you test new functions with a test driver.
 >
 > // Illustrate the scope of an object
 >
-> \#include &lt;iostream&gt; using namespace std; const int maxValue =
+> \#include <iostream> using namespace std; const int maxValue =
 > 9999;
 >
 > void one() { int local = -1;
 >
-> // The scope of local is this function cout &lt;&lt; local &lt;&lt;
+> // The scope of local is this function cout << local <<
 > endl;
 >
 > // maxValue is known after its declaration including here: cout
-> &lt;&lt; maxValue &lt;&lt; endl; }
+> << maxValue << endl; }
 >
 > int main() {
 >
@@ -515,8 +515,8 @@ It is recommended that you test new functions with a test driver.
 >
 > // Function one() is known everywhere after its declaration one();
 >
-> // maxValue is known everywhere after its declaration cout &lt;&lt;
-> maxValue &lt;&lt; endl; return 0; }
+> // maxValue is known everywhere after its declaration cout <<
+> maxValue << endl; return 0; }
 >
 > When a variable is declared outside of a block—as in the case of
 > maxValue—its scope begins at the point of declaration and extends to
@@ -538,13 +538,13 @@ It is recommended that you test new functions with a test driver.
 > // determine which of the three int variables named // identi er are
 > being referenced at any given point.
 >
-> \#include &lt;iostream&gt; using namespace std; const int identi er =
+> \#include <iostream> using namespace std; const int identi er =
 > 1; // Global variable
 >
 > void one() {
 >
-> // This is a reference to the global identi er cout &lt;&lt; "identi
-> er in one(): " &lt;&lt; identi er &lt;&lt; endl;
+> // This is a reference to the global identi er cout << "identi
+> er in one(): " << identi er << endl;
 >
 > }
 >
@@ -552,12 +552,12 @@ It is recommended that you test new functions with a test driver.
 >
 > int identi er = 2; // local to two()
 >
-> cout &lt;&lt; "identi er in two(): " &lt;&lt; identi er &lt;&lt; endl;
+> cout << "identi er in two(): " << identi er << endl;
 >
 > }
 >
 > int main() { int identi er = 3; // local to main() one(); two(); cout
-> &lt;&lt; "identi er in main(): " &lt;&lt; identi er &lt;&lt; endl;
+> << "identi er in main(): " << identi er << endl;
 > return 0; }
 >
 > Output
@@ -603,11 +603,11 @@ SELF-CHECK
 > 4-6 Use the partial program shown below to determine the functions
 > from which each of the following identifi ers may be referenced. cin
 > and cout are initialized in iostream so they are known after \#include
-> &lt;iostream&gt;.
+> <iostream>.
 >
 > // cout b cin MAX c f1 a d f2 main e
 >
-> \#include &lt;iostream&gt; using namespace std; const int MAX = 999;
+> \#include <iostream> using namespace std; const int MAX = 999;
 >
 > void f1(int a) {
 >
@@ -637,7 +637,7 @@ be referenced?
 > Now what about function names? After all, they too are identifi ers.
 > What is their scope? Like cin and cout, the scope of functions in an
 > included fi le like cmath also extends to the end of their own fi le
-> and any fi le with \#include&lt;cmath&gt;. So functions such as sqrt,
+> and any fi le with \#include<cmath>. So functions such as sqrt,
 > pow, ceil, and fabs may be called from within any block unless the
 > function name is re-declared to be something else.
 
@@ -675,32 +675,32 @@ be referenced?
 > If you need a value in many places throughout a program, make it
 > const.
 >
-> \#include &lt;iostream&gt; using namespace std; const int
+> \#include <iostream> using namespace std; const int
 > MAXIMUM\_ENTRIES = 100; // ... a large program with many functions may
 > follow
 
 On the other hand, C++ often uses global identifi ers. Consider the fact
 that after including
 
-> &lt;iostream&gt;, cout is known everywhere, assuming using namespace
+> <iostream>, cout is known everywhere, assuming using namespace
 > std; is written before cout is referenced (left column following) or
 > cout is qualifi ed with std:: (right column).
 
-\#include &lt;iostream&gt; using namespace std;
+\#include <iostream> using namespace std;
 
-void f() { cout &lt;&lt; "In f\\n"; }
+void f() { cout << "In f\\n"; }
 
-void g() { cout &lt;&lt; "In g\\n"; }
+void g() { cout << "In g\\n"; }
 
-int main() { f(); g(); cout &lt;&lt; "In main\\n"; return 0; }
+int main() { f(); g(); cout << "In main\\n"; return 0; }
 
-\#include &lt;iostream&gt;
+\#include <iostream>
 
-// Equivalent code with std:: void f() { std::cout &lt;&lt; "In f\\n"; }
+// Equivalent code with std:: void f() { std::cout << "In f\\n"; }
 
-void g() { std::cout &lt;&lt; "In g\\n"; }
+void g() { std::cout << "In g\\n"; }
 
-int main() { f(); g(); std::cout &lt;&lt; "In main\\n"; return 0;
+int main() { f(); g(); std::cout << "In main\\n"; return 0;
 
 }
 
@@ -759,7 +759,7 @@ int main() { f(); g(); std::cout &lt;&lt; "In main\\n"; return 0;
 > // and parmTwo. Now a change to parmOne or parmTwo alters // the
 > associated object that is the argument's value.
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > // Swap the values of any two int arguments.
 >
@@ -773,9 +773,9 @@ int main() { f(); g(); std::cout &lt;&lt; "In main\\n"; return 0;
 >
 > int argOne = 89; // argOne argTwo int argTwo = 76;
 >
-> cout &lt;&lt; argOne &lt;&lt; " " &lt;&lt; argTwo &lt;&lt; endl; // 89
-> 76 swap(argOne, argTwo); cout &lt;&lt; argOne &lt;&lt; " " &lt;&lt;
-> argTwo &lt;&lt; endl; // 76 89
+> cout << argOne << " " << argTwo << endl; // 89
+> 76 swap(argOne, argTwo); cout << argOne << " " <<
+> argTwo << endl; // 76 89
 >
 > return 0; }
 
@@ -851,7 +851,7 @@ SELF-CHECK
 > 4-9 Write the values of arg1 and arg2 at the moment when return 0;
 > executes.
 
-a.  \#include &lt;iostream&gt; using namespace std; void changeOr(int a,
+a.  \#include <iostream> using namespace std; void changeOr(int a,
     int b) { a = a \* 2 + 1;
 
     b.  = 123;
@@ -867,7 +867,7 @@ a.  \#include &lt;iostream&gt; using namespace std; void changeOr(int a,
 
 }
 
-a.  \#include &lt;iostream&gt; using namespace std; void changeOr(int &
+a.  \#include <iostream> using namespace std; void changeOr(int &
     a, int & b) { a = a \* 2 + 1;
 
     b.  = 123;
@@ -960,8 +960,8 @@ a.  \#include &lt;iostream&gt; using namespace std; void changeOr(int &
 
 Chapter Summary
 
-> void addSomeStuff(**const** string **&** str) { cout &lt;&lt;
-> str.length() &lt;&lt; endl; // Okay
+> void addSomeStuff(**const** string **&** str) { cout <<
+> str.length() << endl; // Okay
 >
 > str.insert(5, "xtra"); // ERROR: can not modify a const parameter str
 > = "new string"; // ERROR: Can not assign to a const parameter }
@@ -972,7 +972,7 @@ Chapter Summary
   ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
   **Changing** **x** **in** **f** **does not change** **y** **in the main function**                                         **Th is code results in a compile time error such as** **“cannot modify a const object”**
   -------------------------------------------------------------------------------------------------------------------------- ------------------------------------------------------------------------------------------------------------------------
-  > \#include &lt;iostream&gt; using namespace std;                                                                          \#include &lt;iostream&gt; using namespace std;
+  > \#include <iostream> using namespace std;                                                                          \#include <iostream> using namespace std;
   >                                                                                                                          
   > double f(double x) { double result;                                                                                      double f(const double & x) { double result;
   >                                                                                                                          
@@ -980,7 +980,7 @@ Chapter Summary
   >                                                                                                                          
   > int main() { // Output:                                                                                                  x = x – 1.5; result = 2 \* x; return result; }
   >                                                                                                                          
-  > // 8 double y = 5.0; // y: 5 cout &lt;&lt; f(y) &lt;&lt; endl; cout &lt;&lt; "y: " &lt;&lt; y &lt;&lt; endl; return 0;   int main() { double y = 5.0; cout &lt;&lt; f(y) &lt;&lt; endl; cout &lt;&lt; "y: " &lt;&lt; y &lt;&lt; endl; return 0;
+  > // 8 double y = 5.0; // y: 5 cout << f(y) << endl; cout << "y: " << y << endl; return 0;   int main() { double y = 5.0; cout << f(y) << endl; cout << "y: " << y << endl; return 0;
   >                                                                                                                          
   > }                                                                                                                        }
   ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -1008,8 +1008,8 @@ CHAPTER SUMMARY
 
 -   Some identifi ers are not declared within a block. In this case,
     > they are global identifi -ers. Examples of global identifi ers
-    > include function sqrt after \#include &lt;cmath&gt;, and the
-    > global object std::cout after \#include &lt;iostream&gt;.
+    > include function sqrt after \#include <cmath>, and the
+    > global object std::cout after \#include <iostream>.
 
 -   Th e scope of a parameter is limited to its function.
 
@@ -1065,7 +1065,7 @@ EXERCISES
 
 4.  Write the output generated by the following program:
 
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 
 4.1: Implementing Your Own Functions
 
@@ -1073,20 +1073,20 @@ EXERCISES
 >
 > int main() {
 >
-> cout &lt;&lt; f2(1, 2.5) &lt;&lt; endl; cout &lt;&lt; f2(-4.5, -3)
-> &lt;&lt; endl; cout &lt;&lt; f2(5, -2) &lt;&lt; endl; return 0; }
+> cout << f2(1, 2.5) << endl; cout << f2(-4.5, -3)
+> << endl; cout << f2(5, -2) << endl; return 0; }
 >
 > 5\. Write the output generated by the following function:
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;cmath&gt; using namespace std;
+> \#include <cmath> using namespace std;
 >
 > double mystery(double p) { return pow(p, 3) - 1; }
 >
-> int main() { double a = 3.0; cout &lt;&lt; mystery( a) &lt;&lt; endl;
-> cout &lt;&lt; mystery(4.0) &lt;&lt; endl; cout &lt;&lt; mystery( -2)
-> &lt;&lt; endl; return 0; }
+> int main() { double a = 3.0; cout << mystery( a) << endl;
+> cout << mystery(4.0) << endl; cout << mystery( -2)
+> << endl; return 0; }
 
 6.  Write a function double sumOf3 that returns the sum of any
     > three doubles. For example, sumOf3(1.5, 2.2, 3.7) should
@@ -1107,14 +1107,14 @@ EXERCISES
 
 > e\. string
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;cmath&gt; using namespace std; const double MAX = 2.0;
+> \#include <cmath> using namespace std; const double MAX = 2.0;
 >
 > double f(double aaa) { double result; result = pow(3.0, aaa); return
 > result; }
 >
-> int main() { string s = "a string"; cout &lt;&lt; f(MAX); return 0; }
+> int main() { string s = "a string"; cout << f(MAX); return 0; }
 
 9.  Will a change to a value parameter modify the associated argument?
 
@@ -1123,15 +1123,15 @@ EXERCISES
 
 11. Write the output generated by this program:
 
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > void changeArgs(double & x, double & y) { x = x - 1.1; y = y + 2.2; }
 >
 > int main() { double a = 3.3; double b = 4.4;
 >
-> cout &lt;&lt; a &lt;&lt; " " &lt;&lt; b &lt;&lt; endl; changeArgs(a,
-> b); cout &lt;&lt; a &lt;&lt; " " &lt;&lt; b &lt;&lt; endl;
-> changeArgs(a, b); cout &lt;&lt; a &lt;&lt; " " &lt;&lt; b &lt;&lt;
+> cout << a << " " << b << endl; changeArgs(a,
+> b); cout << a << " " << b << endl;
+> changeArgs(a, b); cout << a << " " << b <<
 > endl; return 0; }
 
 PROGRAMMING TIPS
@@ -1207,8 +1207,8 @@ Programming Tips
 >
 > // Test drive sumThree int main() {
 >
-> cout &lt;&lt; sumThree(1.1, 2.2, 3.3) &lt;&lt; endl; // 6.6 cout
-> &lt;&lt; sumThree(-1, -2, 3) &lt;&lt; endl; // 0 return 0; }
+> cout << sumThree(1.1, 2.2, 3.3) << endl; // 6.6 cout
+> << sumThree(-1, -2, 3) << endl; // 0 return 0; }
 
 4B ROUNDING TO ~n~ DECIMAL PLACES
 
@@ -1218,11 +1218,11 @@ Programming Tips
 >
 > // Test drive round int main() {
 >
-> // Arguments: number to round (-2.9), decimal places (0) cout &lt;&lt;
-> round(-2.9, 0) &lt;&lt; endl; // -3 cout &lt;&lt; round(-2.59, 1)
-> &lt;&lt; endl; // -2.6 cout &lt;&lt; round(0.0059, 2) &lt;&lt; endl;
-> // 0.01 cout &lt;&lt; round(1.23467, 3) &lt;&lt; endl; // 1.235 cout
-> &lt;&lt; round(9.999999, 4) &lt;&lt; endl; // 10 return 0; }
+> // Arguments: number to round (-2.9), decimal places (0) cout <<
+> round(-2.9, 0) << endl; // -3 cout << round(-2.59, 1)
+> << endl; // -2.6 cout << round(0.0059, 2) << endl;
+> // 0.01 cout << round(1.23467, 3) << endl; // 1.235 cout
+> << round(9.999999, 4) << endl; // 10 return 0; }
 
 4C PAYMENT
 
@@ -1233,9 +1233,9 @@ Programming Tips
 > driver. Round your answer to two decimal places (see Section 3.2). See
 > if your answers match an online mortgage calculator.
 >
-> \#include &lt;iostream&gt; // For the cout object
+> \#include <iostream> // For the cout object
 >
-> \#include &lt;cmath&gt; // For pow, which you de nitely need here
+> \#include <cmath> // For pow, which you de nitely need here
 > using namespace std;
 >
 > double payment(double amtBorrowed, double interestRate, int
@@ -1253,9 +1253,9 @@ Programming Projects
 
 > // by 12. The following test cases represent a monthly payment.
 >
-> cout &lt;&lt; payment(185000.00, 6.0/100.0/12, 30\*12) &lt;&lt; endl;
-> cout &lt;&lt; payment(185000.00, 5.0/100.0/12, 30\*12) &lt;&lt; endl;
-> cout &lt;&lt; payment(185000.00, 4.0/100.0/12, 30\*12) &lt;&lt; endl;
+> cout << payment(185000.00, 6.0/100.0/12, 30\*12) << endl;
+> cout << payment(185000.00, 5.0/100.0/12, 30\*12) << endl;
+> cout << payment(185000.00, 4.0/100.0/12, 30\*12) << endl;
 >
 > return 0; }
 >
@@ -1288,20 +1288,20 @@ One international migrant (net) every *40 seconds*
 >
 > int main() {
 >
-> cout &lt;&lt; populationPrediction (320000000, 0) &lt;&lt; endl; //
+> cout << populationPrediction (320000000, 0) << endl; //
 > 320000000
 >
 > // One and two day growth:
 >
-> cout &lt;&lt; populationPrediction(320000000, 1) &lt;&lt; endl; //
-> 320006314 cout &lt;&lt; populationPrediction(320000000, 2) &lt;&lt;
+> cout << populationPrediction(320000000, 1) << endl; //
+> 320006314 cout << populationPrediction(320000000, 2) <<
 > endl; // 320012628
 >
 > // One and two year growth
 >
-> cout &lt;&lt; populationPrediction(320000000, 365) &lt;&lt; endl; //
-> 322304554 cout &lt;&lt; populationPrediction(320000000, 2\*365)
-> &lt;&lt; endl; // 324609108
+> cout << populationPrediction(320000000, 365) << endl; //
+> 322304554 cout << populationPrediction(320000000, 2\*365)
+> << endl; // 324609108
 >
 > return 0; }
 >
@@ -1358,7 +1358,7 @@ One international migrant (net) every *40 seconds*
 > // and the root in question. This function should return 0.0, // but
 > something close to 0.0 like -6.66134e-16 is okay.
 >
-> // This function could return nan if b\^2 – 4ac &lt; 0 or a is 0.
+> // This function could return nan if b\^2 – 4ac < 0 or a is 0.
 > double evaluate(double a, double b, double c, double root)
 >
 > // Generate the requested dialog using the two functions above. int
