--- a/translation/06_第六章.md
+++ b/translation/06_第六章.md
@@ -162,7 +162,7 @@ COMING UP
 
 File BankAccount.h
 
-> \#include &lt;string&gt;
+> \#include <string>
 >
 > // Do not place using statements in header les. Use std::
 >
@@ -214,8 +214,8 @@ File BankAccount.h
 > 437.05 and its own name of "Skyler Boatwright". So the return values
 > of these two messages would be 507.34 followed by 437.05.
 >
-> cout &lt;&lt; anAccount.balance() &lt;&lt; endl; // 507.34 cout
-> &lt;&lt; another.balance() &lt;&lt; endl; // 437.05
+> cout << anAccount.balance() << endl; // 507.34 cout
+> << another.balance() << endl; // 437.05
 
 SELF-CHECK
 
@@ -230,7 +230,7 @@ SELF-CHECK
 
 > \*/
 >
-> \#include&lt;string&gt;
+> \#include<string>
 >
 > class LibraryBook { public:
 >
@@ -341,8 +341,8 @@ Th e following code implements the two-parameter constructor:
 >
 > BankAccount anInitializedAccount("Corker", 250.55);
 >
-> // Output: cout &lt;&lt; anInitializedAccount.getName() &lt;&lt; endl;
-> // Corker cout &lt;&lt; anInitializedAccount.getBalance() &lt;&lt;
+> // Output: cout << anInitializedAccount.getName() << endl;
+> // Corker cout << anInitializedAccount.getBalance() <<
 > endl; // 250.55
 >
 > Th ere is a major diff erence between implementing class member
@@ -356,7 +356,7 @@ Th e following code implements the two-parameter constructor:
 > error messages at any attempt to access private data members (name and
 > balance). BankAccount:: is missing.
 >
-> BankAccount(string initName, double initBalance) { // &lt;-- WHOOPS
+> BankAccount(string initName, double initBalance) { // <-- WHOOPS
 > name = initName; // ERROR: name is not known balance = initBalance; //
 > ERROR: balance is not known }
 >
@@ -512,7 +512,7 @@ SELF-CHECK
 
 > \*/
 >
-> \#include &lt;string&gt; using namespace std; \#include
+> \#include <string> using namespace std; \#include
 > "LibraryBook.h" const std::string AVAILABLE\_MESSAGE = "CAN BORROW";
 >
 > //--two argument constructor
@@ -547,23 +547,23 @@ SELF-CHECK
 >
 > // Send every possible message to a LibraryBook object
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > \#include "LibraryBook.h" // For class LibraryBook de nition
 >
 > int main() {
 >
 > LibraryBook aBook("Tinker Tailor Soldier Spy", "John le Carre"); cout
-> &lt;&lt; aBook.getBookInfo() &lt;&lt; endl; cout &lt;&lt;
-> aBook.getBorrower() &lt;&lt; endl;
+> << aBook.getBookInfo() << endl; cout <<
+> aBook.getBorrower() << endl;
 >
-> cout &lt;&lt; aBook.isAvailable() &lt;&lt; endl; // 1 if true, 0 if
-> false aBook.borrowBook("Charlie Archer"); cout &lt;&lt;
-> aBook.getBorrower() &lt;&lt; endl; cout &lt;&lt; aBook.isAvailable()
-> &lt;&lt; endl; aBook.returnBook();
+> cout << aBook.isAvailable() << endl; // 1 if true, 0 if
+> false aBook.borrowBook("Charlie Archer"); cout <<
+> aBook.getBorrower() << endl; cout << aBook.isAvailable()
+> << endl; aBook.returnBook();
 >
-> cout &lt;&lt; aBook.isAvailable() &lt;&lt; endl; cout &lt;&lt;
-> aBook.getBorrower() &lt;&lt; endl; return 0; }
+> cout << aBook.isAvailable() << endl; cout <<
+> aBook.getBorrower() << endl; return 0; }
 >
 > Output
 >
@@ -593,7 +593,7 @@ SELF-CHECK
 >
 > // File: Adder.h
 >
-> \#include &lt;string&gt; class Adder { public:
+> \#include <string> class Adder { public:
 >
 > // Default constructors have no parameters.
 >
@@ -639,23 +639,23 @@ constructor
 
 Th e following program uses both constructors to show the diff erence.
 
-> \#include &lt;iostream&gt; using namespace std; \#include "Adder.h"
+> \#include <iostream> using namespace std; \#include "Adder.h"
 >
 > int main() {
 >
 > Adder adder1(123.45);
 >
-> cout &lt;&lt; " Initial sum: " &lt;&lt; adder1.getSum() &lt;&lt; endl;
+> cout << " Initial sum: " << adder1.getSum() << endl;
 
 6.3: Default Constructors
 
 > Adder adder2;
 >
-> cout &lt;&lt; " Default sum: " &lt;&lt; adder2.getSum() &lt;&lt; endl;
+> cout << " Default sum: " << adder2.getSum() << endl;
 >
 > adder2.add(1.1); adder2.add(2.2); adder2.add(3.3);
 >
-> cout &lt;&lt; "After 3 adds: " &lt;&lt; adder2.getSum() &lt;&lt; endl;
+> cout << "After 3 adds: " << adder2.getSum() << endl;
 >
 > return 0; }
 >
@@ -708,7 +708,7 @@ Th e following program uses both constructors to show the diff erence.
 > However, functions that diff er only in their return type cannot be
 > overloaded.
 >
-> void aFunction(int n); string aFunction(int n); // &lt;- Error
+> void aFunction(int n); string aFunction(int n); // <- Error
 
 6.4 THE STATE OBJECT PATTERN
 
@@ -843,7 +843,7 @@ Th e following program uses both constructors to show the diff erence.
 > outside of the class:
 >
 > // An error occurs: attempting to modify private data myAcct.balance =
-> myAcct.balance + 100000.00; // &lt;- ERROR
+> myAcct.balance + 100000.00; // <- ERROR
 >
 > or a debit like this:
 >
@@ -1012,19 +1012,19 @@ Keep related data and behavior in one place.
 >
 > // functions and passing objects of that class as const parameter
 >
-> \#include &lt;iostream&gt; // For cout and endl using namespace std;
+> \#include <iostream> // For cout and endl using namespace std;
 > \#include "BankAccount.h" // For the BankAccount class
 >
 > void display(const BankAccount & ba) {
 >
-> // Can send accessing messages--they are declared const cout &lt;&lt;
-> "{ BankAccount: " &lt;&lt; ba.getName() &lt;&lt; ", \$" &lt;&lt;
-> ba.getBalance() &lt;&lt; " }" &lt;&lt; endl;
+> // Can send accessing messages--they are declared const cout <<
+> "{ BankAccount: " << ba.getName() << ", \$" <<
+> ba.getBalance() << " }" << endl;
 >
 > // This modi er was not tagged with const. A compile time // error
 > will be generated since ba is a const parameter.
 >
-> ba.withdraw(234.56); // &lt;-- ERROR at compile time }
+> ba.withdraw(234.56); // <-- ERROR at compile time }
 >
 > int main() { BankAccount anAcct("Angel Draper", 1234.56);
 >
@@ -1086,8 +1086,8 @@ Always declare accessor member functions as const.
 > Th e presence of const tells the compiler to allow the message to be
 > sent even for objects passed by const reference (g here):
 >
-> void doSomething(const Grid & g) { cout &lt;&lt; g.row() &lt;&lt;
-> endl; // OKAY cout &lt;&lt; g.nColumns() &lt;&lt; endl; // OKAY
+> void doSomething(const Grid & g) { cout << g.row() <<
+> endl; // OKAY cout << g.nColumns() << endl; // OKAY
 >
 > g.display(); // OKAY
 >
@@ -1135,13 +1135,13 @@ SELF-CHECK
 > lines that cause errors in a standard C++ compiler (1, 2, 3, and/or
 > 4).
 >
-> \#include &lt;iostream&gt; using namespace std; \#include
+> \#include <iostream> using namespace std; \#include
 > "BankAccount.h" // For the BankAccount class
 >
-> void check(const BankAccount & b, double amount) { cout &lt;&lt;
-> b.getName() &lt;&lt; endl; // 1 b.deposit(amount); // 2
+> void check(const BankAccount & b, double amount) { cout <<
+> b.getName() << endl; // 1 b.deposit(amount); // 2
 >
-> b.withdraw(amount); // 3 cout &lt;&lt; b.getBalance() &lt;&lt; endl;
+> b.withdraw(amount); // 3 cout << b.getBalance() << endl;
 > // 4
 >
 > }
@@ -1305,7 +1305,7 @@ Exercises
 >
 > **TEST DRIVER**
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > \#include "Counter.h" // For the counter class de nition
 >
@@ -1313,22 +1313,22 @@ Exercises
 >
 > Counter aCounter(3);
 >
-> cout &lt;&lt; "a: " &lt;&lt; aCounter.getCount() &lt;&lt; endl;
+> cout << "a: " << aCounter.getCount() << endl;
 > aCounter.click();
 >
-> cout &lt;&lt; "b: " &lt;&lt; aCounter.getCount() &lt;&lt; endl;
+> cout << "b: " << aCounter.getCount() << endl;
 > aCounter.click();
 >
-> cout &lt;&lt; "c: " &lt;&lt; aCounter.getCount() &lt;&lt; endl;
+> cout << "c: " << aCounter.getCount() << endl;
 > aCounter.click();
 >
-> cout &lt;&lt; "d: " &lt;&lt; aCounter.getCount() &lt;&lt; endl;
+> cout << "d: " << aCounter.getCount() << endl;
 > aCounter.click();
 >
-> cout &lt;&lt; "e: " &lt;&lt; aCounter.getCount() &lt;&lt; endl;
+> cout << "e: " << aCounter.getCount() << endl;
 > aCounter.reset();
 >
-> cout &lt;&lt; "f: " &lt;&lt; aCounter.getCount() &lt;&lt; endl; return
+> cout << "f: " << aCounter.getCount() << endl; return
 > 0; }
 >
 > 14\. Write all code that would go into Counter.cpp that completely
@@ -1391,7 +1391,7 @@ PROGRAMMING TIPS
 >
 > \*/
 >
-> \#include &lt;string&gt; class CD {
+> \#include <string> class CD {
 >
 > public:
 >
@@ -1430,21 +1430,21 @@ PROGRAMMING PROJECTS
 > getTransactionCount(). Use this test driver and ensure your output
 > matches and compiles:
 >
-> \#include &lt;iostream&gt; using namespace std; \#include
+> \#include <iostream> using namespace std; \#include
 > "BankAccount.h"
 >
 > int main() {
 >
 > BankAccount anAcct("Do 3", 3.00);
 >
-> cout &lt;&lt; "0? " &lt;&lt; anAcct.getTransactionCount() &lt;&lt;
+> cout << "0? " << anAcct.getTransactionCount() <<
 > endl; anAcct.deposit(10.00); anAcct.withdraw(20.00);
-> anAcct.deposit(30.00); cout &lt;&lt; "3? " &lt;&lt;
-> anAcct.getTransactionCount() &lt;&lt; endl;
+> anAcct.deposit(30.00); cout << "3? " <<
+> anAcct.getTransactionCount() << endl;
 >
 > BankAccount another("Do 1", 1.00); another.withdraw(25.00);
 >
-> cout &lt;&lt; "1? " &lt;&lt; another.getTransactionCount() &lt;&lt;
+> cout << "1? " << another.getTransactionCount() <<
 > endl;
 >
 > return 0;
@@ -1478,7 +1478,7 @@ PROGRAMMING PROJECTS
                                >
   int main() {                 > . . . . . . . . . . . .
                                >
-  Grid g(6, 12, 1, 9, east);   > . . . . . . . . . &gt; . .
+  Grid g(6, 12, 1, 9, east);   > . . . . . . . . . > . .
                                >
   g.display();                 > . . . . . . . . . . . .
                                >
@@ -1496,7 +1496,7 @@ PROGRAMMING PROJECTS
                                >
   g.display(); return 0;       > . . . . . . . . . . .
                                >
-  }                            > . &lt; . . . . . . .
+  }                            > . < . . . . . . .
                                >
                                > . . . . . . . . . . . .
                                >
@@ -1539,26 +1539,26 @@ PROGRAMMING PROJECTS
 >
 > Th is test driver should generate the expected output below:
 >
-> \#include &lt;iostream&gt; using namespace std; \#include "Averager.h"
+> \#include <iostream> using namespace std; \#include "Averager.h"
 >
 > int main() {
 >
 > Averager averager;
 >
-> cout &lt;&lt; " 0? " &lt;&lt; averager.getScoresAdded() &lt;&lt; endl;
+> cout << " 0? " << averager.getScoresAdded() << endl;
 >
 > averager.addScore(90.0);
 >
-> cout &lt;&lt; " 90? " &lt;&lt; averager.getAverage() &lt;&lt; endl;
-> cout &lt;&lt; " 1? " &lt;&lt; averager.getScoresAdded() &lt;&lt; endl;
+> cout << " 90? " << averager.getAverage() << endl;
+> cout << " 1? " << averager.getScoresAdded() << endl;
 >
-> cout &lt;&lt; endl; averager.addScore(100.0); averager.addScore(80.0);
+> cout << endl; averager.addScore(100.0); averager.addScore(80.0);
 > averager.addScore(70.0); averager.addScore(60.0);
 > averager.addScore(53.0);
 >
-> cout &lt;&lt; "Scores Added 6? " &lt;&lt; averager.getScoresAdded()
-> &lt;&lt; endl; cout &lt;&lt; " Average 75.5? " &lt;&lt;
-> averager.getAverage() &lt;&lt; endl; return 0; }
+> cout << "Scores Added 6? " << averager.getScoresAdded()
+> << endl; cout << " Average 75.5? " <<
+> averager.getAverage() << endl; return 0; }
 >
 > Expected Output
 >
@@ -1602,25 +1602,25 @@ PROGRAMMING PROJECTS
 >
 > void addPennies(int penniesAdded);
 >
-> // pre: penniesAdded &gt; 0
+> // pre: penniesAdded > 0
 >
 > // post: This PiggyBank has penniesAdded more pennies
 >
 > void addNickels(int nickelsAdded);
 >
-> // pre: nickelsAdded &gt; 0
+> // pre: nickelsAdded > 0
 >
 > // post: This PiggyBank has nickelsAdded more nickels
 >
 > void addDimes(int dimesAdded);
 >
-> // pre: dimesAdded &gt; 0
+> // pre: dimesAdded > 0
 >
 > // post: This PiggyBank has dimesAdded more dimes
 >
 > void addQuarters(int quartersAdded);
 >
-> // pre: quartersAdded &gt; 0
+> // pre: quartersAdded > 0
 >
 > // post: This PiggyBank has quartersAdded more quarters
 >
@@ -1656,21 +1656,21 @@ PROGRAMMING PROJECTS
 >
 > Th is test driver should generate the expected output below:
 >
-> \#include &lt;iostream&gt; using namespace std; \#include
+> \#include <iostream> using namespace std; \#include
 > "PiggyBank.h"
 >
 > int main() { PiggyBank pb;
 >
-> cout &lt;&lt; " 0? " &lt;&lt; pb.getTotalCashInBank() &lt;&lt; endl;
+> cout << " 0? " << pb.getTotalCashInBank() << endl;
 > pb.addPennies(4); pb.addNickels(3); pb.addDimes(2); pb.addQuarters(1);
 >
-> cout &lt;&lt; " 4? " &lt;&lt; pb.getPennies() &lt;&lt; endl; cout
-> &lt;&lt; " 3? " &lt;&lt; pb.getNickels() &lt;&lt; endl; cout &lt;&lt;
-> " 2? " &lt;&lt; pb.getDimes() &lt;&lt; endl; cout &lt;&lt; " 1? "
-> &lt;&lt; pb.getQuarters() &lt;&lt; endl; cout &lt;&lt; "0.64? "
-> &lt;&lt; pb.getTotalCashInBank() &lt;&lt; endl; cout &lt;&lt; "0.64? "
-> &lt;&lt; pb.drainTheBank() &lt;&lt; endl; cout &lt;&lt; " 0? "
-> &lt;&lt; pb.getTotalCashInBank() &lt;&lt; endl; return 0; }
+> cout << " 4? " << pb.getPennies() << endl; cout
+> << " 3? " << pb.getNickels() << endl; cout <<
+> " 2? " << pb.getDimes() << endl; cout << " 1? "
+> << pb.getQuarters() << endl; cout << "0.64? "
+> << pb.getTotalCashInBank() << endl; cout << "0.64? "
+> << pb.drainTheBank() << endl; cout << " 0? "
+> << pb.getTotalCashInBank() << endl; return 0; }
 >
 > Expected Output
 >
@@ -1718,11 +1718,11 @@ Selection*
 
 > \*/
 >
-> \#include &lt;string&gt;
+> \#include <string>
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;cmath&gt;
+> \#include <cmath>
 >
 > class Employee { public:
 >
@@ -1739,11 +1739,11 @@ Selection*
 >
 > void giveRaise(double raise);
 >
-> // pre: raise &gt; 0. The argument 3.5 means a 3.50% raise.
+> // pre: raise > 0. The argument 3.5 means a 3.50% raise.
 >
 > // post: The hourly rate of pay has changed
 >
-> void setHoursWorked(double hoursWorked); // pre: hoursWorked &gt;= 0.0
+> void setHoursWorked(double hoursWorked); // pre: hoursWorked >= 0.0
 > // post: hours worked for the current week is set.
 >
 > // Gross pay, net pay, and taxes can now be computed.
@@ -1760,7 +1760,7 @@ Selection*
 > message in order for the gross pay taxes and net pay to be computed.
 > Th is test driver should generate the expected output below:
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
 > \#include "Employee.h" using namespace std;
 >
@@ -1768,23 +1768,23 @@ Selection*
 >
 > Employee emp1("Ali", 10.00);
 >
-> cout &lt;&lt; " Ali? " &lt;&lt; emp1.getName() &lt;&lt; endl; cout
-> &lt;&lt; " 10? " &lt;&lt; emp1.getHourlyRate() &lt;&lt; endl; cout
-> &lt;&lt; " 0? " &lt;&lt; emp1.getHoursWorked() &lt;&lt; endl; cout
-> &lt;&lt; " 0? " &lt;&lt; emp1.getGrossPay() &lt;&lt; endl;
+> cout << " Ali? " << emp1.getName() << endl; cout
+> << " 10? " << emp1.getHourlyRate() << endl; cout
+> << " 0? " << emp1.getHoursWorked() << endl; cout
+> << " 0? " << emp1.getGrossPay() << endl;
 >
 > // Record the hours worked in the current week
 > emp1.setHoursWorked(40.00);
 >
-> cout &lt;&lt; " 400? " &lt;&lt; emp1.getGrossPay() &lt;&lt; endl; cout
-> &lt;&lt; " 24.8? " &lt;&lt; emp1.getSocSecurityTax() &lt;&lt; endl;
-> cout &lt;&lt; " 5.8? " &lt;&lt; emp1.getMedicareTax() &lt;&lt; endl;
-> cout &lt;&lt; " 369.4? " &lt;&lt; emp1.getNetPay() &lt;&lt; endl; cout
-> &lt;&lt; endl; emp1.giveRaise(10); // 10% raise
+> cout << " 400? " << emp1.getGrossPay() << endl; cout
+> << " 24.8? " << emp1.getSocSecurityTax() << endl;
+> cout << " 5.8? " << emp1.getMedicareTax() << endl;
+> cout << " 369.4? " << emp1.getNetPay() << endl; cout
+> << endl; emp1.giveRaise(10); // 10% raise
 >
-> cout &lt;&lt; " 11? " &lt;&lt; emp1.getHourlyRate() &lt;&lt; endl;
-> cout &lt;&lt; " 440? " &lt;&lt; emp1.getGrossPay() &lt;&lt; endl; cout
-> &lt;&lt; "406.34? " &lt;&lt; emp1.getNetPay() &lt;&lt; endl; }
+> cout << " 11? " << emp1.getHourlyRate() << endl;
+> cout << " 440? " << emp1.getGrossPay() << endl; cout
+> << "406.34? " << emp1.getNetPay() << endl; }
 >
 > Expected Output
 >
