--- a/translation/09_第九章.md
+++ b/translation/09_第九章.md
@@ -24,7 +24,7 @@ COMING UP
 
 9.1 ifstream OBJECTS
 
-> Because keyboard input is fairly common, inclusion of &lt;iostream&gt;
+> Because keyboard input is fairly common, inclusion of <iostream>
 > was designed to make cin immediately available. Th e cin object is
 > automatically initialized and associated with the keyboard. However,
 > input may also be obtained from many other sources, such as a mouse, a
@@ -35,10 +35,10 @@ COMING UP
 > erefore, this compiler directive must be added to programs intended to
 > extract input from a disk fi le:
 >
-> \#include &lt;fstream&gt; // For the ifstream class
+> \#include <fstream> // For the ifstream class
 >
 > Th e ifstream class is similar to the istream class. For example, the
-> familiar extraction operator &gt;&gt; is also used to input data from
+> familiar extraction operator >> is also used to input data from
 > a fi le stored on a disk. Th e same rules that apply to keyboard input
 > for ints, doubles, and strings also apply to input from a fi le.
 
@@ -65,7 +65,7 @@ associated with.
 > Now this code will read input from the fi le input.data rather than
 > from the keyboard.
 >
-> inFile &gt;&gt; intObject;
+> inFile >> intObject;
 >
 > Th e following program uses an ifstream object to read three integers
 > from a disk fi le. Notice that there are a few diff erences between
@@ -78,15 +78,15 @@ associated with.
     > construct an ifstream object with an existing disk fi le name
     > associated with it.
 
--   Prompts aren’t needed anymore. Th e same &gt;&gt; operator reads an
+-   Prompts aren’t needed anymore. Th e same >> operator reads an
     > integer and stores it into the int object, but there is no need to
     > prompt the fi le for the next input.
 
 > // Include fstream for I/O streams dealing with disk les
 >
-> \#include &lt;fstream&gt; // For the ifstream class
+> \#include <fstream> // For the ifstream class
 >
-> \#include &lt;iostream&gt; // For cout using namespace std;
+> \#include <iostream> // For cout using namespace std;
 >
 > int main() { int n1, n2, n3;
 >
@@ -94,10 +94,10 @@ associated with.
 > associated with the operating system le named input.data ifstream
 > inFile("input.data");
 >
-> // Extract three integers from the le input.data inFile &gt;&gt; n1
-> &gt;&gt; n2 &gt;&gt; n3; cout &lt;&lt; "n1: " &lt;&lt; n1 &lt;&lt;
-> endl; cout &lt;&lt; "n2: " &lt;&lt; n2 &lt;&lt; endl; cout &lt;&lt;
-> "n3: " &lt;&lt; n3 &lt;&lt; endl;
+> // Extract three integers from the le input.data inFile >> n1
+> >> n2 >> n3; cout << "n1: " << n1 <<
+> endl; cout << "n2: " << n2 << endl; cout <<
+> "n3: " << n3 << endl;
 >
 > return 0;
 >
@@ -133,7 +133,7 @@ SELF-CHECK
 
 > 9-1 Write a complete program that reads the fi rst 30 strings from an
 > input fi le named student.data and displays each string to the screen.
-> Remember to \#include &lt;fstream&gt;.
+> Remember to \#include <fstream>.
 
 9.1.1 GETTING THE PATH RIGHT
 
@@ -156,7 +156,7 @@ SELF-CHECK
 > ifstream inFile("myC++Stuff/input.data");
 >
 > Also consider what happens if the fi le is not found. Input operations
-> such as inFile &gt;&gt; will not execute. If you don’t seem to be
+> such as inFile >> will not execute. If you don’t seem to be
 > extracting input from the fi le or the values appear to be garbage,
 > chances are the fi le does not exist as specifi ed, it has a diff
 > erent name, it’s in a diff erent directory, you used \\ rather than
@@ -167,8 +167,8 @@ SELF-CHECK
 >
 > if( ! inFile ) {
 >
-> // If true, the input le was not found. cout &lt;&lt; "Failed to nd
-> the le." &lt;&lt; endl;
+> // If true, the input le was not found. cout << "Failed to nd
+> the le." << endl;
 >
 > } else {
 >
@@ -186,11 +186,11 @@ SELF-CHECK
 > Ctrl-D (\^D) in Unix.
 >
 > When the end-of-fi le event is encountered on an input stream, the
-> input statement (cin &gt;&gt;, for example) returns false (0,
+> input statement (cin >>, for example) returns false (0,
 > actually). So once again, the cin statement can be used as a loop test
 > for processing an undetermined number of inputs.
 >
-> while(cin &gt;&gt; x) { // Input value at start of each iteration
+> while(cin >> x) { // Input value at start of each iteration
 >
 > // Process value
 >
@@ -202,7 +202,7 @@ SELF-CHECK
 > and the loop terminates.
 >
 > Th e loop in the following program terminates when the user enters end
-> of fi le. Th e loop test (cin &gt;&gt; x) returns false when end-of-fi
+> of fi le. Th e loop test (cin >> x) returns false when end-of-fi
 > le is detected.
 
 9.2: The Indeterminate Loop Pattern Applied to Disk Files
@@ -235,9 +235,9 @@ end-of-fi le fi rst?
 > // Count how many numbers are in a disk le. The ifstream object //
 > named is used as the input stream, not cin.
 >
-> \#include &lt;fstream&gt; // For the ifstream class
+> \#include <fstream> // For the ifstream class
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > int main() {
 >
@@ -248,16 +248,16 @@ end-of-fi le fi rst?
 >
 > // If true, the input le was not found
 >
-> cout &lt;&lt; "Failed to nd the le numbers.data" &lt;&lt; endl;
+> cout << "Failed to nd the le numbers.data" << endl;
 >
-> } else { cout &lt;&lt; "The le was successfully constructed" &lt;&lt;
-> endl; while( inFile &gt;&gt; x ) { n++; // Track the number of loops
+> } else { cout << "The le was successfully constructed" <<
+> endl; while( inFile >> x ) { n++; // Track the number of loops
 >
-> cout &lt;&lt; "iteration \#" &lt;&lt; n &lt;&lt; ": " &lt;&lt; x
-> &lt;&lt; endl;
+> cout << "iteration \#" << n << ": " << x
+> << endl;
 >
-> } cout &lt;&lt; "End of le reached. " &lt;&lt; n &lt;&lt; " numbers
-> found." &lt;&lt; endl;
+> } cout << "End of le reached. " << n << " numbers
+> found." << endl;
 >
 > } return 0; }
 >
@@ -289,7 +289,7 @@ b.  the fi le numbers.data contains one number?
 c.  the fi le numbers.data contains zero numbers (the fi le is empty)?
 
 > 9-4 Write the output of the following program with the various data
-> stored in the fi le input.data. (*Note:* inFile &gt;&gt; intObject
+> stored in the fi le input.data. (*Note:* inFile >> intObject
 > will fail if an invalid number is encountered in the input fi le
 > stream; input need not be on separate lines.)
 
@@ -297,17 +297,17 @@ a.  1 2 3 c. 1 2 3 BAD
 
 b.  1 2 3 4 5 d. 1.5 2.6 3.7
 
-> \#include &lt;fstream&gt; // For the ifstream class
+> \#include <fstream> // For the ifstream class
 >
-> \#include &lt;iostream&gt; // For cout using namespace std; int main()
+> \#include <iostream> // For cout using namespace std; int main()
 > {
 >
 > ifstream inFile("input.data"); int sum = 0; int intObject;
-> while(inFile &gt;&gt; intObject) { sum += intObject;
+> while(inFile >> intObject) { sum += intObject;
 >
 > }
 >
-> cout &lt;&lt; sum &lt;&lt; endl; return 0; }
+> cout << sum << endl; return 0; }
 
 9.2.2 LETTING THE USER SELECT THE FILE NAME
 
@@ -316,7 +316,7 @@ b.  1 2 3 4 5 d. 1.5 2.6 3.7
 > read the fi le name as a string. However, the string object itself
 > cannot be used to initialize an ifstream object.
 >
-> string leName; cout &lt;&lt; "Enter le name: "; cin &gt;&gt; leName;
+> string leName; cout << "Enter le name: "; cin >> leName;
 >
 > ifstream inFile( leName);
 >
@@ -370,8 +370,8 @@ b.  1 2 3 4 5 d. 1.5 2.6 3.7
 > to construct one Employee object (class Employee) are read from the
 > ifstream object referenced by inFile.
 >
-> while(inFile &gt;&gt; hourlyRate &gt;&gt; exemptions &gt;&gt;
-> maritalStatus &gt;&gt; rstName &gt;&gt; lastName) {
+> while(inFile >> hourlyRate >> exemptions >>
+> maritalStatus >> rstName >> lastName) {
 >
 > // process the data
 >
@@ -392,9 +392,9 @@ the repeated part.
 > objects, // set the hours worked for the week, and show the gross pay
 > for each.
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;fstream&gt; // For the ifstream class using namespace
+> \#include <fstream> // For the ifstream class using namespace
 > std; \#include "Employee.h" // For the Employee class
 >
 > int main() { string rstName, lastName; double hourlyRate,
@@ -404,16 +404,16 @@ the repeated part.
 > inFile("employee.data"); if (!inFile) {
 >
 > // Show error if the le "payroll.data" is not found on the disk cout
-> &lt;&lt; "\*\*Error opening le 'employee.data'" &lt;&lt; endl;
+> << "\*\*Error opening le 'employee.data'" << endl;
 >
 > } else {
 >
-> // Process data until end of le while (inFile &gt;&gt; hourlyRate
-> &gt;&gt; exemptions &gt;&gt; maritalStatus
+> // Process data until end of le while (inFile >> hourlyRate
+> >> exemptions >> maritalStatus
 >
-> &gt;&gt; rstName &gt;&gt; lastName) { string name (lastName + ", " +
-> rstName); cout &lt;&lt; "Hours worked for " &lt;&lt; name &lt;&lt; "?
-> "; cin &gt;&gt; hoursThisWeek;
+> >> rstName >> lastName) { string name (lastName + ", " +
+> rstName); cout << "Hours worked for " << name << "?
+> "; cin >> hoursThisWeek;
 >
 > Employee anEmp(name, hourlyRate, maritalStatus, exemptions);
 > anEmp.setHoursWorked(hoursThisWeek); // Print the gross pay in a
@@ -484,8 +484,8 @@ SELF-CHECK
 >
 > When that input is read and executes:
 >
-> while(inFile &gt;&gt; hourlyRate &gt;&gt; exemptions &gt;&gt;
-> maritalStatus &gt;&gt; rstName &gt;&gt; lastName)
+> while(inFile >> hourlyRate >> exemptions >>
+> maritalStatus >> rstName >> lastName)
 >
 > Th e fi rst time through the loop, the S is encountered while
 > attempting to read an integer for exemptions. Th e input stream fails.
@@ -559,8 +559,8 @@ SELF-CHECK
 >
 > string sentence;
 >
-> cout &lt;&lt; "Enter a sentence ended with a period &lt;'.'&gt;: "
-> &lt;&lt; endl; getline(cin, sentence, '.');
+> cout << "Enter a sentence ended with a period <'.'>: "
+> << endl; getline(cin, sentence, '.');
 >
 > // assert: sentence has all characters up to, but not including //
 > '.'. The '.' is pulled out of input stream (discarded).
@@ -572,16 +572,16 @@ SELF-CHECK
 > any input fi le. Th e input is the program itself, so the number of
 > lines should be 17.
 >
-> \#include &lt;iostream&gt; // 1 File name: getline.cpp
+> \#include <iostream> // 1 File name: getline.cpp
 >
-> \#include &lt;fstream&gt; // 2 \#include &lt;string&gt; // 3 using
+> \#include <fstream> // 2 \#include <string> // 3 using
 > namespace std; // 4
 >
 > // 5 int main() { // 6 string aLine; // 7 ifstream
 > inFile("getline.cpp"); int lineCount = 0; // 9 // 10
 > while(getline(inFile, aLine)) { lineCount++; // 12 } // 13 // 14
 >
-> cout &lt;&lt; "Lines in getline.cpp: " &lt;&lt; lineCount &lt;&lt;
+> cout << "Lines in getline.cpp: " << lineCount <<
 > endl; return 0; // 16 } // 17
 >
 > Output
@@ -595,13 +595,13 @@ prompt?
 
 a\. 1313 Mockingbird Lane. b. 1214 Chestnut Drive.
 
-> \#include &lt;iostream&gt; // For cout
+> \#include <iostream> // For cout
 >
-> \#include &lt;string&gt; // For getline and string using namespace
+> \#include <string> // For getline and string using namespace
 > std; int main() { string street;
 >
-> cout &lt;&lt; "Enter street address, end with a period &lt;.&gt; "
-> &lt;&lt; endl; getline(cin, street, '.'); cout &lt;&lt; street; return
+> cout << "Enter street address, end with a period <.> "
+> << endl; getline(cin, street, '.'); cout << street; return
 > 0; }
 >
 > Getting back to the problem of reading names that may have one, two,
@@ -612,13 +612,13 @@ a\. 1313 Mockingbird Lane. b. 1214 Chestnut Drive.
 >
 > // Process data until end of le
 >
-> while (inFile &gt;&gt; hourlyRate &gt;&gt; exemptions &gt;&gt;
+> while (inFile >> hourlyRate >> exemptions >>
 > maritalStatus
 >
 > && (getline(inFile, fullName))) { // Extract rst blank character in
 > fullName fullName = fullName.substr(1, fullName.length() - 1); cout
-> &lt;&lt; "Hours worked for " &lt;&lt; fullName &lt;&lt; "? "; cin
-> &gt;&gt; hoursThisWeek;
+> << "Hours worked for " << fullName << "? "; cin
+> >> hoursThisWeek;
 >
 > Employee anEmp(fullName, hourlyRate, maritalStatus, exemptions);
 > anEmp.setHoursWorked(hoursThisWeek);
@@ -638,18 +638,18 @@ a\. 1313 Mockingbird Lane. b. 1214 Chestnut Drive.
 > messages that could be sent to cout can also be sent to ofstream
 > objects.
 >
-> \#include &lt;iostream&gt; // For cout
+> \#include <iostream> // For cout
 >
-> \#include &lt;fstream&gt; // For the ofstream class using namespace
+> \#include <fstream> // For the ofstream class using namespace
 > std; int main() {
 >
 > ofstream outFile("out.data");
 >
-> outFile &lt;&lt; "This string goes to a disk, not the screen" &lt;&lt;
-> endl; double x = 1.23; outFile &lt;&lt; x &lt;&lt; endl;
-> outFile.width(30); outFile &lt;&lt; x &lt;&lt; endl;
+> outFile << "This string goes to a disk, not the screen" <<
+> endl; double x = 1.23; outFile << x << endl;
+> outFile.width(30); outFile << x << endl;
 >
-> cout &lt;&lt; "This string goes to the screen" &lt;&lt; endl; return
+> cout << "This string goes to the screen" << endl; return
 > 0; }
 >
 > Output (to the fi le associated with the object named outFile)
@@ -672,8 +672,8 @@ SELF-CHECK
 
 9-8 What output goes to the disk fi le named out.data?
 
-> ofstream out("out.data"); for(int j = 1; j &lt;= 5; j++) cout &lt;&lt;
-> j &lt;&lt; " ";
+> ofstream out("out.data"); for(int j = 1; j <= 5; j++) cout <<
+> j << " ";
 
 CHAPTER SUMMARY
 
@@ -683,7 +683,7 @@ CHAPTER SUMMARY
 -   Th e ! operator is overloaded to determine if a fi le has not been
     > properly opened for input.
 
--   Use the input operator &gt;&gt; in the loop test to read input until
+-   Use the input operator >> in the loop test to read input until
     > the end of any fi le of any size.
 
 -   You can use ofstream objects like cout. Th e only diff erence is
@@ -722,8 +722,8 @@ EXERCISES
 >
 > string address;
 >
-> cout &lt;&lt; "Enter your address: "; getline(cin, address); cout
-> &lt;&lt; "Address: " &lt;&lt; address &lt;&lt; endl;
+> cout << "Enter your address: "; getline(cin, address); cout
+> << "Address: " << address << endl;
 >
 > Dialogue
 >
@@ -731,10 +731,10 @@ EXERCISES
 >
 > Address: 1313 Mockingbird Lane, Washington D.C.
 
-2.  Be careful when using getline and &gt;&gt; together. Be careful when
-    > mixing getline with the &gt;&gt; operator on the same
-    > input stream. Th e &gt;&gt; operator skips whitespace; getline
-    > does not. Worse yet, cin &gt;&gt; will stop at the new line. A
+2.  Be careful when using getline and >> together. Be careful when
+    > mixing getline with the >> operator on the same
+    > input stream. Th e >> operator skips whitespace; getline
+    > does not. Worse yet, cin >> will stop at the new line. A
     > subsequent getline will go up to the new line, eff ectively
     > reading nothing. In this case, you will need an extra getline to
     > get beyond the end of the line.
@@ -744,7 +744,7 @@ EXERCISES
     > le loop. Consider fi rst writing a test driver with code that
     > inputs the fi rst line from the fi le and then displays it.
 
-4.  Input is messy. Using istream &gt;&gt; and getline on the same input
+4.  Input is messy. Using istream >> and getline on the same input
     > stream can cause diffi cultto-detect errors. Additionally, when
     > there is a mix of integer, fl oating-point, character, and string
     > input, it is not always easy to get the input statements correct.
@@ -783,7 +783,7 @@ Programming Projects
 > that has the fi le name input by the user. Remember to use
 > string::c\_str to initialize the ifstream object.
 >
-> cin &gt;&gt; leName;
+> cin >> leName;
 >
 > ifstream inFile( leName.c\_str());
 
