--- a/translation/11_第十一章.md
+++ b/translation/11_第十一章.md
@@ -66,7 +66,7 @@ COMING UP
 > Expressions such as x or 1.5 can be passed as arguments to functions.
 > Class names (types) such as int, double, string, and BankAccount can
 > also be passed as arguments using the C++ template mechanism,
-> &lt;int&gt; or &lt;string&gt; for example. Passing type names as
+> <int> or <string> for example. Passing type names as
 > arguments allows programmers to use the same collection class to hold
 > any type of object. Th is means we need only one Set class instead of
 > a diff erent Set class for every type to be stored.
@@ -82,11 +82,11 @@ COMING UP
 > automatically created to manage collections of that class. For
 > example, we can have sets of any type:
 >
-> Set&lt;string&gt; ids; // Store string objects only
+> Set<string> ids; // Store string objects only
 >
-> Set&lt;double&gt; nums; // Store numbers only
+> Set<double> nums; // Store numbers only
 >
-> Set&lt;BankAccount&gt; accounts; // Store BankAccount objects only
+> Set<BankAccount> accounts; // Store BankAccount objects only
 >
 > Another advantage to templates is that we can restrict the type to
 > insert only that one type. For example, these messages compile:
@@ -110,13 +110,13 @@ COMING UP
 
 General Form 11.1 *Class templates*
 
-> template&lt;class *template-parameter*&gt; class *class\_name*
+> template<class *template-parameter*> class *class\_name*
 >
 > Template declarations written before a class give the template
 > parameter scope that extends throughout the entire class defi nition.
 > For example, the Set template class in C++ could begin like this:
 >
-> template&lt;class Type&gt; class Set { public:
+> template<class Type> class Set { public:
 >
 > // Allow insertion of only one speci c type void insert (Type
 > element);
@@ -124,7 +124,7 @@ General Form 11.1 *Class templates*
 > Th e Set type makes frequent use of the template parameter named Type.
 > For example, when a Set is constructed like this:
 >
-> Set &lt;string&gt; names; the parameter Type is replaced by the Type
+> Set <string> names; the parameter Type is replaced by the Type
 > name that was passed as the argument between angle brackets, which is
 > string here. C++ then generates this code:
 >
@@ -133,7 +133,7 @@ General Form 11.1 *Class templates*
 > However, if a constructor were invoked to initialize a Set of ints as
 > in
 >
-> Set &lt;int&gt; x;
+> Set <int> x;
 >
 > C++ generates this code where Type gets replaced with int:
 >
@@ -150,7 +150,7 @@ General Form 11.1 *Class templates*
 > Type here) before the class defi nition is critically important to the
 > templated types:
 >
-> template&lt;class Type&gt; class Set { public: Set();
+> template<class Type> class Set { public: Set();
 >
 > Type insert(Type element) private:
 >
@@ -165,9 +165,9 @@ General Form 11.1 *Class templates*
 > For example, these object initializations cause s1 and s2 to become
 > templated to string and double, respectively:
 
-Set &lt;string&gt; s1; Set &lt;double&gt; s2;
+Set <string> s1; Set <double> s2;
 
-template&lt;class Type&gt; template&lt;class Type&gt;
+template<class Type> template<class Type>
 
 > class Set { class Set { public: public: Set(); Set();
 
@@ -184,18 +184,18 @@ string key; };
 Here is a sample program to summarize the capabilities of the generic
 Set class:
 
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;string&gt; using namespace std; \#include "Set.h" // For
+> \#include <string> using namespace std; \#include "Set.h" // For
 > a generic (with templates) Set class
 >
 > int main() {
 >
-> Set&lt;string&gt; names;
+> Set<string> names;
 >
-> cout &lt;&lt; "After contruction, size is " &lt;&lt; names.size()
-> &lt;&lt; endl; // 0 cout &lt;&lt; "and the Set isEmpty: " &lt;&lt;
-> names.isEmpty() &lt;&lt; endl; // true
+> cout << "After contruction, size is " << names.size()
+> << endl; // 0 cout << "and the Set isEmpty: " <<
+> names.isEmpty() << endl; // true
 >
 > // Add a few elements, duplicates not allowed names.insert("Chris");
 > names.insert("Chris"); names.insert("Dakota"); names.insert("River");
@@ -203,16 +203,16 @@ Set class:
 > names.remove("River"); // Succeeds names.remove("Not here"); // No
 > change to the Set
 >
-> cout &lt;&lt; endl &lt;&lt; "After 4 insert attempts and 2 remove
-> attempts: " &lt;&lt; endl; cout &lt;&lt; "isEmpty: " &lt;&lt;
-> names.isEmpty() &lt;&lt; endl; // false cout &lt;&lt; "size: "
-> &lt;&lt; names.size() &lt;&lt; endl; // 2 cout &lt;&lt;
-> "contains(\\"Chris\\")? " &lt;&lt; names.contains("Chris") &lt;&lt;
-> endl; cout &lt;&lt; "contains(\\"Dakota\\")? " &lt;&lt;
-> names.contains("Dakota") &lt;&lt; endl; cout &lt;&lt;
-> "contains(\\"River\\")? " &lt;&lt; names.contains("River") &lt;&lt;
-> endl; cout &lt;&lt; "contains(\\"No\\")? " &lt;&lt;
-> names.contains("No") &lt;&lt; endl;
+> cout << endl << "After 4 insert attempts and 2 remove
+> attempts: " << endl; cout << "isEmpty: " <<
+> names.isEmpty() << endl; // false cout << "size: "
+> << names.size() << endl; // 2 cout <<
+> "contains(\\"Chris\\")? " << names.contains("Chris") <<
+> endl; cout << "contains(\\"Dakota\\")? " <<
+> names.contains("Dakota") << endl; cout <<
+> "contains(\\"River\\")? " << names.contains("River") <<
+> endl; cout << "contains(\\"No\\")? " <<
+> names.contains("No") << endl;
 >
 > return 0;
 >
@@ -259,8 +259,8 @@ Set class:
 >
 > BankAccount acct3("Billie", 567.88);
 >
-> if(acct1 == acct2 && !(acct1 == acct3)) // true cout &lt;&lt; "acct1
-> == acct, but not acct3: " &lt;&lt; endl;
+> if(acct1 == acct2 && !(acct1 == acct3)) // true cout << "acct1
+> == acct, but not acct3: " << endl;
 >
 > Output
 >
@@ -278,7 +278,7 @@ SELF-CHECK
 
 > Use this object declaration to answer the following questions:
 >
-> Set&lt;int&gt; intSet;
+> Set<int> intSet;
 
 11-1 How many integers can be stored in intSet?
 
@@ -289,12 +289,12 @@ SELF-CHECK
 
 11-4 Write a message that will remove 89 from intSet.
 
-11.2 class Set&lt;Type&gt;
+11.2 class Set<Type>
 
 > Th is section shows how a vector and templates are combined to
 > implement a Set class. Th is Set object:
 
--   is generic because any type of element is allowed with &lt;Type&gt;
+-   is generic because any type of element is allowed with <Type>
 
 -   does not have a fi xed maximum size—it allocates memory as long
     > there is some memory available in the free store
@@ -308,7 +308,7 @@ SELF-CHECK
 >
 > A second reason for using just one .h fi le is it prevents writing the
 > same line before every method heading. Th e code looks cleaner with a
-> dozen fewer of these repeated lines: template &lt;class Type&gt;. Also
+> dozen fewer of these repeated lines: template <class Type>. Also
 > there are about a dozen fewer occurrences of Set:: before each method
 > defi nition. So the generic (template) Set class will be built in the
 > same fi le: Set.h. All methods are in the same fi le:
@@ -323,17 +323,17 @@ SELF-CHECK
 
 > \*/
 
-11.2: class Set&lt;Type&gt;
+11.2: class Set<Type>
 
-> \#ifndef SET\_H\_ \#de ne SET\_H\_ \#include &lt;vector&gt;
+> \#ifndef SET\_H\_ \#de ne SET\_H\_ \#include <vector>
 >
-> template&lt;class Type&gt; class Set {
+> template<class Type> class Set {
 >
-> A vector will be used to store the elements in any Set&lt;Type&gt;. Th
+> A vector will be used to store the elements in any Set<Type>. Th
 > is Set will also maintain an int variable n to store the number of
 > unique elements:
 >
-> private: std::vector&lt;Type&gt; elements; int n;
+> private: std::vector<Type> elements; int n;
 >
 > Th e member data n will be initialized to 0 in the constructor, must
 > be increased by 1 for each successful insert, and must be decreased by
@@ -354,11 +354,11 @@ SELF-CHECK
 
 Th e programmer may construct Set objects like this:
 
-> Set &lt;double&gt; tests;
+> Set <double> tests;
 >
-> Set &lt;string&gt; names;
+> Set <string> names;
 >
-> Set &lt;BankAccount&gt; names;
+> Set <BankAccount> names;
 
 11.2.2 bool contains(Type const& value) const
 
@@ -368,7 +368,7 @@ Th e programmer may construct Set objects like this:
 > immediately returns true.
 >
 > // Return true if value is in this set bool contains(Type const&
-> value) const { for (int i = 0; i &lt; n; i++) { if (value ==
+> value) const { for (int i = 0; i < n; i++) { if (value ==
 > elements\[i\]) return true;
 >
 > }
@@ -420,7 +420,7 @@ Th e programmer may construct Set objects like this:
 > bool remove(Type const& removalCandidate) { // Find the index of the
 > element to remove int index = 0;
 >
-> while (index &lt; n && !(removalCandidate == elements\[index\])) {
+> while (index < n && !(removalCandidate == elements\[index\])) {
 > index++;
 >
 > }
@@ -448,13 +448,13 @@ SELF-CHECK
 
 11-5 How many diff erent classes are built when this code is compiled?
 
-> Set&lt;string&gt; ids;
+> Set<string> ids;
 >
-> Set&lt;int&gt; studentNumber;
+> Set<int> studentNumber;
 >
-> Set&lt;double&gt; points;
+> Set<double> points;
 >
-> Set&lt;double&gt; tests;
+> Set<double> tests;
 >
 > 11-6 What is the value of a Set’s size() after each of these
 > situations? Assume the Set is constructed before each situation.
@@ -476,9 +476,9 @@ c)  40 successful inserts, then 40 successful removals
 > contained objects. Th e following program shows how the client code
 > could iterate over the entire collection without having to worry about
 > going out of bounds. It is a preview of the four methods that will be
-> added to class Set&lt;Type&gt; to allow access to all elements.
+> added to class Set<Type> to allow access to all elements.
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > \#include "Set.h" // For a generic (with templates) Set class
 >
@@ -486,7 +486,7 @@ c)  40 successful inserts, then 40 successful removals
 >
 > int main() {
 >
-> Set&lt;BankAccount&gt; set; // Store set of 3 BankAccount objects
+> Set<BankAccount> set; // Store set of 3 BankAccount objects
 >
 > BankAccount anAcct("Devon", 100.00); set.insert(anAcct);
 >
@@ -496,13 +496,13 @@ c)  40 successful inserts, then 40 successful removals
 > set. rst(); // Initialize an iteration over all elements double total
 > = 0.00; while(set.hasMore()) {
 >
-> cout &lt;&lt; set.current().getName() &lt;&lt; " has "; cout &lt;&lt;
-> set.current().getBalance() &lt;&lt; endl; total +=
+> cout << set.current().getName() << " has "; cout <<
+> set.current().getBalance() << endl; total +=
 > set.current().getBalance(); set.next();
 >
 > }
 >
-> cout &lt;&lt; "Total balance: " &lt;&lt; total &lt;&lt; endl;
+> cout << "Total balance: " << total << endl;
 >
 > return 0; }
 >
@@ -528,7 +528,7 @@ c)  40 successful inserts, then 40 successful removals
 SELF-CHECK
 
 > 11-7 Write code that determines the maximum BankAccount balance no
-> matter how many elements are in the Set&lt;BankAccount&gt;.
+> matter how many elements are in the Set<BankAccount>.
 
 11.3.1 THE ITERATOR MEMBER FUNCTIONS
 
@@ -550,7 +550,7 @@ SELF-CHECK
 > currentIndex to return true when there is at least one more element to
 > visit:
 >
-> bool hasMore() const { return currentIndex &lt; n;
+> bool hasMore() const { return currentIndex < n;
 >
 > }
 
@@ -562,7 +562,7 @@ Th e next() member function simply increments the internal index:
 >
 > And fi nally, current() returns the element referred to by the
 > internal cursor current. Notice that the return type is whatever the
-> client code specifi ed in constructing the Set&lt;Type&gt;.
+> client code specifi ed in constructing the Set<Type>.
 >
 > Type current() const { return elements\[currentIndex\]; }
 
@@ -591,11 +591,11 @@ CHAPTER SUMMARY
 
 -   /
 
-> \#ifndef SET\_H\_ \#de ne SET\_H\_ \#include &lt;vector&gt;
+> \#ifndef SET\_H\_ \#de ne SET\_H\_ \#include <vector>
 >
-> template&lt;class Type&gt; class Set {
+> template<class Type> class Set {
 >
-> private: std::vector&lt;Type&gt; elements; int n; int currentIndex;
+> private: std::vector<Type> elements; int n; int currentIndex;
 >
 > public:
 >
@@ -630,7 +630,7 @@ EXERCISES
 
 1.  Use this code to answer each of the questions below:
 
-> \#include "Set.h" int main() { Set&lt;double&gt; db;
+> \#include "Set.h" int main() { Set<double> db;
 >
 > // . . .
 
@@ -653,11 +653,11 @@ Programming Tips
 
 > // You only need one template class
 >
-> Plus&lt;int&gt; a(2, 3);
+> Plus<int> a(2, 3);
 >
-> Plus&lt;double&gt; b(2.2, 3.3);
+> Plus<double> b(2.2, 3.3);
 >
-> Plus&lt;string&gt; c("Abe", "Lincoln");
+> Plus<string> c("Abe", "Lincoln");
 >
 > a.show(); // 5
 >
@@ -666,7 +666,7 @@ Programming Tips
 > c.show(); // AbeLincoln
 
 1.  Write code that fi nds the range of integers in
-    > Set&lt;int&gt; intSet;. Range is defi ned as the largest integer
+    > Set<int> intSet;. Range is defi ned as the largest integer
     > minus the smallest integer.
 
 PROGRAMMING TIPS
@@ -702,11 +702,11 @@ PROGRAMMING TIPS
     > wait line: fi rst in, fi rst out. Th e column on the left shows
     > two fi les and oft-repeated syntax, about 80 words. Th e single .h
     > fi le on the right column is shorter—fewer lines, fewer words, and
-    > fewer symbols such as &lt;, &gt;, and ::.
+    > fewer symbols such as <, >, and ::.
 
 PROGRAMMING PROJECTS
 
-11A class Stack&lt;Type&gt;
+11A class Stack<Type>
 
 > Implement a generic (with templates) Stack. A Stack allows elements to
 > be added and removed in a last-in, fi rst-out (LIFO) manner. Stacks
@@ -723,26 +723,26 @@ Programming Projects
 > referenced. Here is a Stack for storing up to 20 integers. Your
 > program must compile and generate the output.
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
 > \#include "Stack.h" using namespace std;
 >
-> int main() { Stack&lt;int&gt; intStack(20); // stack of 20 ints
+> int main() { Stack<int> intStack(20); // stack of 20 ints
 >
 > // Use intStack intStack.push(1); intStack.push(2); intStack.push(3);
 > intStack.push(4);
 >
-> cout &lt;&lt; "4? " &lt;&lt; intStack.peek() &lt;&lt; endl; cout
-> &lt;&lt; "4? " &lt;&lt; intStack.pop() &lt;&lt; endl; cout &lt;&lt;
-> "3? " &lt;&lt; intStack.peek() &lt;&lt; endl;
+> cout << "4? " << intStack.peek() << endl; cout
+> << "4? " << intStack.pop() << endl; cout <<
+> "3? " << intStack.peek() << endl;
 >
-> cout &lt;&lt; "isEmpty 0? " &lt;&lt; intStack.isEmpty() &lt;&lt; endl;
-> cout &lt;&lt; "3 2 1? "; while(! intStack.isEmpty()) { cout &lt;&lt;
-> intStack.pop() &lt;&lt; " ";
+> cout << "isEmpty 0? " << intStack.isEmpty() << endl;
+> cout << "3 2 1? "; while(! intStack.isEmpty()) { cout <<
+> intStack.pop() << " ";
 >
-> } cout &lt;&lt; endl;
+> } cout << endl;
 >
-> cout &lt;&lt; "isEmpty 1? " &lt;&lt; intStack.isEmpty() &lt;&lt; endl;
+> cout << "isEmpty 1? " << intStack.isEmpty() << endl;
 >
 > return 0; }
 >
@@ -755,26 +755,26 @@ Programming Projects
 > *Note:* See the beginning of a Queue class in the Programming Tips
 > section of this chapter for a complete class in one .h fi le.
 
-11B PriorityList&lt;Type&gt;
+11B PriorityList<Type>
 
 > Th is project asks you to implement a collection class
-> PriorityList&lt;Type&gt; using a vector data member. Th is new type
+> PriorityList<Type> using a vector data member. Th is new type
 > will store a collection of elements as a zero-based indexed list where
 > the element at index 0 is considered to have higher priority than the
 > element at index 1. Th e element at index size()-1 has the lowest
 > priority. An instance of this collection class will be able to store
-> just one type of element such as &lt;string&gt;. Remember that the
+> just one type of element such as <string>. Remember that the
 > element at index 0 is the top priority; the element at index size()-1
 > is the lowest priority.
 >
-> PriorityList&lt;string&gt; todos;
+> PriorityList<string> todos;
 >
 > todos.insertElementAt(0, "Study for the CS exam");
 > todos.insertElementAt(0, "Get groceries"); todos.insertElementAt(0,
 > "Sleep");
 >
-> for(int priority = 0; priority &lt; todos.size(); priority++) cout
-> &lt;&lt; todos.getElementAt(priority) &lt;&lt; endl;
+> for(int priority = 0; priority < todos.size(); priority++) cout
+> << todos.getElementAt(priority) << endl;
 >
 > Output
 >
@@ -784,7 +784,7 @@ Programming Projects
 >
 > Study for the CS exam
 >
-> Complete these methods in PriorityList&lt;Type&gt; so it uses a vector
+> Complete these methods in PriorityList<Type> so it uses a vector
 > to store the elements.
 >
 > // Construct an empty PriorityList with capacity to store 20 elements
@@ -794,7 +794,7 @@ Programming Projects
 > // Return the number of elements currently in this PriorityList int
 > size();
 >
-> // Return true if size() == 0 or false if size() &gt; 0 bool
+> // Return true if size() == 0 or false if size() > 0 bool
 > isEmpty();
 >
 > // Insert the element at the given index. If the vector // is too
@@ -849,75 +849,75 @@ Programming Projects
 > the list. *Recommended:* implement one method at a time, and write
 > tests to ensure that it works.
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;string&gt; // Needed by Visual Studio
+> \#include <string> // Needed by Visual Studio
 >
 > \#include "PriorityList.h" using namespace std;
 >
 > int main() {
 >
-> PriorityList&lt;string&gt; list; list.insertElementAt(0, "a");
+> PriorityList<string> list; list.insertElementAt(0, "a");
 > list.insertElementAt(1, "b"); list.insertElementAt(2, "c");
 > list.insertElementAt(3, "d");
 >
-> for (int i = 0; i &lt; list.size(); i++) // a b c d cout &lt;&lt;
-> list.getElementAt(i) &lt;&lt; " "; cout &lt;&lt; endl;
+> for (int i = 0; i < list.size(); i++) // a b c d cout <<
+> list.getElementAt(i) << " "; cout << endl;
 >
 > list.insertElementAt(1, "f");
 >
-> for (int i = 0; i &lt; list.size(); i++) // a f b c d cout &lt;&lt;
-> list.getElementAt(i) &lt;&lt; " "; cout &lt;&lt; endl;
+> for (int i = 0; i < list.size(); i++) // a f b c d cout <<
+> list.getElementAt(i) << " "; cout << endl;
 >
 > list.removeElementAt(0);
 >
-> for (int i = 0; i &lt; list.size(); i++) // f b c d cout &lt;&lt;
-> list.getElementAt(i) &lt;&lt; " "; cout &lt;&lt; endl;
+> for (int i = 0; i < list.size(); i++) // f b c d cout <<
+> list.getElementAt(i) << " "; cout << endl;
 >
 > list.lowerPriorityOf(3); // no effect list.lowerPriorityOf(0); // move
 > f right list.lowerPriorityOf(1); // move f right
-> list.lowerPriorityOf(2); // move f right for (int i = 0; i &lt;
-> list.size(); i++) // b c d f cout &lt;&lt; list.getElementAt(i)
-> &lt;&lt; " "; cout &lt;&lt; endl;
+> list.lowerPriorityOf(2); // move f right for (int i = 0; i <
+> list.size(); i++) // b c d f cout << list.getElementAt(i)
+> << " "; cout << endl;
 >
 > list.raisePriorityOf(0); // no effect list.raisePriorityOf(2); // move
-> d left list.raisePriorityOf(1); // move d left for (int i = 0; i &lt;
-> list.size(); i++) // d b c f cout &lt;&lt; list.getElementAt(i)
-> &lt;&lt; " "; cout &lt;&lt; endl;
+> d left list.raisePriorityOf(1); // move d left for (int i = 0; i <
+> list.size(); i++) // d b c f cout << list.getElementAt(i)
+> << " "; cout << endl;
 >
 > list.moveToLast(list.size() - 1); // no effect
 >
 > list.moveToLast(0); // move d from top priority to last priority
 >
-> for (int i = 0; i &lt; list.size(); i++) // b c f d cout &lt;&lt;
-> list.getElementAt(i) &lt;&lt; " "; cout &lt;&lt; endl;
+> for (int i = 0; i < list.size(); i++) // b c f d cout <<
+> list.getElementAt(i) << " "; cout << endl;
 >
 > list.moveToTop(0); // no effect
 >
 > list.moveToTop(2); // move f to top priority again for (int i = 0; i
-> &lt; list.size(); i++) // f b c d cout &lt;&lt; list.getElementAt(i)
-> &lt;&lt; " ";
+> < list.size(); i++) // f b c d cout << list.getElementAt(i)
+> << " ";
 >
 > return 0; }
 
-11C PriorityList&lt;Type&gt; THROWS EXCEPTIONS
+11C PriorityList<Type> THROWS EXCEPTIONS
 
 > *Optional:* Change your code so it throws an exception when the index
 > is out of range. To do this, fi rst add this \#include to
-> PriorityList&lt;Type&gt;:
+> PriorityList<Type>:
 >
-> \#include &lt;stdexcept&gt;
+> \#include <stdexcept>
 >
 > Th en add an if statement to every method that takes index as a
 > parameter. An exception will be thrown if the programmer supplies an
-> incorrect index like -1 or an index &gt; size(), which is a good
+> incorrect index like -1 or an index > size(), which is a good
 > thing:
 >
 > // Insert the element at the given index.
 >
 > // precondition: index is on the range of 0 through size() void
-> insertElementAt(int index, Type element) { if (index &lt; 0 || index
-> &gt; size()) { throw std::invalid\_argument(
+> insertElementAt(int index, Type element) { if (index < 0 || index
+> > size()) { throw std::invalid\_argument(
 >
 > "\\ninsertElementAt: index must be 0..size()");
 >
