--- a/translation/12_第十二章.md
+++ b/translation/12_第十二章.md
@@ -92,8 +92,8 @@ COMING UP
 > the string class was chosen because there is no way to predict how
 > many characters will be entered by the user at runtime:
 >
-> string name; // Memory allocated during input cout &lt;&lt; "Enter
-> your name: "; cin &gt;&gt; name;
+> string name; // Memory allocated during input cout << "Enter
+> your name: "; cin >> name;
 >
 > Th e string class also allows programmers to assign varying-length
 > strings:
@@ -243,18 +243,18 @@ p 123 anInt
 > // Interchange two pointer values. The pointers are switched // to
 > point to the other's original int object.
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > int main() { double\* p1; double\* p2; double\* temp; double n1 =
 > 99.9; double n2 = 88.8;
 >
 > // Let p1 point to n1 and p2 point to n2 p1 = &n1; p2 = &n2;
 >
-> cout &lt;&lt; "\*p1 and \*p2 before switch" &lt;&lt; endl;
+> cout << "\*p1 and \*p2 before switch" << endl;
 >
 > // Get the integers indirectly with the \* operator
 >
-> cout &lt;&lt; (\*p1) &lt;&lt; " " &lt;&lt; (\*p2) &lt;&lt; endl;
+> cout << (\*p1) << " " << (\*p2) << endl;
 >
 > // Swap the pointers by letting p1 point to where p2 is pointing.
 >
@@ -266,12 +266,12 @@ p 123 anInt
 >
 > // other's int object. The ints themselves do not move.
 >
-> cout &lt;&lt; "\*p1 and \*p2 after switch" &lt;&lt; endl; cout
-> &lt;&lt; (\*p1) &lt;&lt; " " &lt;&lt; (\*p2) &lt;&lt; endl &lt;&lt;
+> cout << "\*p1 and \*p2 after switch" << endl; cout
+> << (\*p1) << " " << (\*p2) << endl <<
 > endl;
 >
-> cout &lt;&lt; "Actual memory locations in hexadecimal:" &lt;&lt; endl;
-> cout &lt;&lt; p1 &lt;&lt; " " &lt;&lt; p2 &lt;&lt; endl;
+> cout << "Actual memory locations in hexadecimal:" << endl;
+> cout << p1 << " " << p2 << endl;
 >
 > return 0; }
 >
@@ -316,7 +316,7 @@ p1p2temp
 > And fi nally, p2 = temp; causes p2 to point to the same double to
 > which p1 was originally pointing.
 >
-> Now that p2 points to n1 and p1 points to n2, cout &lt;&lt; (\*p1)
+> Now that p2 points to n1 and p1 points to n2, cout << (\*p1)
 > displays 88.8 rather than the original 99.9.
 >
 > At fi rst, working with pointers is not easy. It takes a shift from
@@ -329,8 +329,8 @@ p1p2temp
 >
 > Also when writing debugging code, the value being pointed to is
 > usually more telling than the address of where that object is located.
-> So debug with \* as in cout &lt;&lt; (\*aPointer); rather than cout
-> &lt;&lt; aPointer;. With this, you see the more useful values of the
+> So debug with \* as in cout << (\*aPointer); rather than cout
+> << aPointer;. With this, you see the more useful values of the
 > objects, not their addresses.
 
 12.1.2 POINTERS TO OBJECTS
@@ -341,7 +341,7 @@ p1p2temp
 > dereference operator has a lower priority than a function call, this
 > code will not work:
 >
-> BankAccount anAcct("Functions &gt; Dereference", 123.45);
+> BankAccount anAcct("Functions > Dereference", 123.45);
 >
 > BankAccount\* bp; bp = &anAcct; \*bp.deposit(123.45); // ERROR
 >
@@ -351,19 +351,19 @@ p1p2temp
 >
 > (\*bp).deposit(123.45); // OKAY
 >
-> Or you could use the C++ arrow operator -&gt; as a shortcut to denote
+> Or you could use the C++ arrow operator -> as a shortcut to denote
 > that the pointer is pointing to an instance of a true class:
 >
-> bp-&gt;deposit(123.45); // SHORTCUT
+> bp->deposit(123.45); // SHORTCUT
 
 Both techniques are used in the following program:
 
-> \#include &lt;iostream&gt; using namespace std; \#include
+> \#include <iostream> using namespace std; \#include
 > "BankAccount.h"
 >
 > int main() {
 >
-> BankAccount anAcct("both (\*bp) and bp-&gt; work ", 100.00);
+> BankAccount anAcct("both (\*bp) and bp-> work ", 100.00);
 >
 > BankAccount\* bp; bp = &anAcct;
 >
@@ -373,20 +373,20 @@ Both techniques are used in the following program:
 >
 > (\*bp).deposit(123.45);
 >
-> cout &lt;&lt; (\*bp).getName() &lt;&lt; (\*bp).getBalance() &lt;&lt;
+> cout << (\*bp).getName() << (\*bp).getBalance() <<
 > endl;
 >
-> // Use -&gt; for pointers to objects other than int or double
-> bp-&gt;withdraw(111.11);
+> // Use -> for pointers to objects other than int or double
+> bp->withdraw(111.11);
 >
-> cout &lt;&lt; bp-&gt;getName() &lt;&lt; bp-&gt;getBalance() &lt;&lt;
+> cout << bp->getName() << bp->getBalance() <<
 > endl;
 >
 > return 0; }
 >
 > Output
 >
-> both (\*bp) and bp-&gt; work 223.45 both (\*bp) and bp-&gt; work
+> both (\*bp) and bp-> work 223.45 both (\*bp) and bp-> work
 > 112.34
 
 SELF-CHECK
@@ -413,7 +413,7 @@ d.  Write code to *indirectly* change the value of aDouble from 1.23
 3.  What is the value of s3 after this code runs:
 
 > string s1 = string("one"); string\* p1 = &s1; string s3 =
-> p1-&gt;c\_str(); s3 += p1-&gt;c\_str(); cout &lt;&lt; s3;
+> p1->c\_str(); s3 += p1->c\_str(); cout << s3;
 
 3.  Write an expression that evaluates to the sum of the two BankAccount
     > balances indirectly.
@@ -428,11 +428,11 @@ d.  Write code to *indirectly* change the value of aDouble from 1.23
 
 3.  Write the output generated by the following program:
 
-> \#include &lt;iostream&gt; using namespace std; int main() { int\* p;
+> \#include <iostream> using namespace std; int main() { int\* p;
 > int j = 12; p = &j;
 >
-> cout &lt;&lt; ((\*p) + (\*p)) &lt;&lt; " " &lt;&lt; ((\*p) \* (\*p))
-> &lt;&lt; endl; return 0; }
+> cout << ((\*p) + (\*p)) << " " << ((\*p) \* (\*p))
+> << endl; return 0; }
 
 3.  Write statements that store the address of ch, a char object, into a
     > char pointer object named charPtr.
@@ -450,22 +450,22 @@ d.  Write code to *indirectly* change the value of aDouble from 1.23
 
 > int p = 111; int\* q = &p; p += 222;
 >
-> cout &lt;&lt; "p? " &lt;&lt; p &lt;&lt; endl; cout &lt;&lt; "q? "
-> &lt;&lt; \*q &lt;&lt; endl;
+> cout << "p? " << p << endl; cout << "q? "
+> << \*q << endl;
 
 3.  Write the output generated by the following code:
 
 > int n1 = 4; int n2 = 8; int\* ptr1; int\* ptr2; ptr1 = &n1; ptr2 =
 > &n2;
 >
-> cout &lt;&lt; (\*ptr1) &lt;&lt; " " &lt;&lt; (\*ptr2) &lt;&lt; endl;
+> cout << (\*ptr1) << " " << (\*ptr2) << endl;
 > 12-12 Write the output generated by the following code:
 >
 > double\* p = new double; double\* q = new double;
 >
 > \*p = 1.23; \*q = 4.56; p = q;
 >
-> cout &lt;&lt; (\*p) &lt;&lt; " " &lt;&lt; (\*q);
+> cout << (\*p) << " " << (\*q);
 >
 > 12-13 In the preceding code of 12-12, is it possible to retrieve the
 > value 1.23 by modifying the last line?
@@ -542,17 +542,17 @@ arrays:
   -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
   > **Diff erence**                                                              vector **Example**                                    **C Array Example**
   ------------------------------------------------------------------------------ ----------------------------------------------------- ----------------------------------------------------
-  > vectors can initialize all vector elements at construction; arrays cannot.   vector &lt;int&gt; x(100, 0); // All elements are 0   int x\[100\]; // Elements are garbage
+  > vectors can initialize all vector elements at construction; arrays cannot.   vector <int> x(100, 0); // All elements are 0   int x\[100\]; // Elements are garbage
 
-  > vectors can be easily resized at runtime; arrays take a lot more work.       int n; cin &gt;&gt; n;                                // See growing an array
+  > vectors can be easily resized at runtime; arrays take a lot more work.       int n; cin >> n;                                // See growing an array
                                                                                                                                        
                                                                                  x.resize(n);                                          // in a later chapter
 
-  > vectors can be made to prevent out-of-range subscripts.                      // You are told                                       // Destroys other variables cin &gt;&gt; x\[100\];
+  > vectors can be made to prevent out-of-range subscripts.                      // You are told                                       // Destroys other variables cin >> x\[100\];
                                                                                                                                        
-                                                                                 // something is wrong cin &gt;&gt; x.at(100);         
+                                                                                 // something is wrong cin >> x.at(100);         
 
-  > vectors require an \#include; primitive, built-in arrays do not.             \#include &lt;vector&gt;                              > // No \#include required
+  > vectors require an \#include; primitive, built-in arrays do not.             \#include <vector>                              > // No \#include required
   -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 12.2.2 THE ARRAY / POINTER CONNECTION
@@ -599,7 +599,7 @@ arrays:
 >
 > // The & is not required. An array stores an address.
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > void init(int x\[\], int & n) {
 >
@@ -609,10 +609,10 @@ arrays:
 > int main() { int n = 5; int anArray\[5\];
 >
 > init(anArray, n); // init will change x and anArray for (int index =
-> 0; index &lt; n; index++) { cout &lt;&lt; anArray\[index\] &lt;&lt; "
+> 0; index < n; index++) { cout << anArray\[index\] << "
 > ";
 >
-> } cout &lt;&lt; endl;
+> } cout << endl;
 >
 > return 0; }
 >
@@ -686,7 +686,7 @@ above is an abbreviated form of the following equivalent code:
 >
 > // Illustrate one pointer object and one int object
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 
 12.3: Allocating Memory with new
 
@@ -703,9 +703,9 @@ above is an abbreviated form of the following equivalent code:
 >
 > \*intPtr = 123;
 >
-> cout &lt;&lt; "\\n The address stored in the pointer object: "
-> &lt;&lt; intPtr; cout &lt;&lt; "\\nThe value of the int pointed to by
-> intPtr: " &lt;&lt; \*intPtr;
+> cout << "\\n The address stored in the pointer object: "
+> << intPtr; cout << "\\nThe value of the int pointed to by
+> intPtr: " << \*intPtr;
 >
 > return 0; }
 >
@@ -770,25 +770,25 @@ above is an abbreviated form of the following equivalent code:
 
 > // This code dynamically (at runtime) "grows" an array
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > int main() { int n = 10;
 >
 > int\* nums = new int\[n\]; // Some C++ compilers can not handle
 > int\[n\] int anInt = 1;
 >
-> // Initialize n array elements with a for loop for (int i = 0; i &lt;
+> // Initialize n array elements with a for loop for (int i = 0; i <
 > n; i++) { nums\[i\] = anInt; anInt += 3; }
 >
-> // Show the lled array for (int i = 0; i &lt; n; i++) { cout &lt;&lt;
-> nums\[i\] &lt;&lt; " "; }
+> // Show the lled array for (int i = 0; i < n; i++) { cout <<
+> nums\[i\] << " "; }
 >
 > // Need more room? Grow the array at runtime
 >
 > int\* temp = new int\[n+5\]; // Some C++ compilers can not handle
 > int\[n+5\]
 >
-> // 2) copy the elements to the temporary array for (int i = 0; i &lt;
+> // 2) copy the elements to the temporary array for (int i = 0; i <
 > n; i++) { temp\[i\] = nums\[i\]; }
 >
 > // Make the original array pointer refer to the "bigger" array nums =
@@ -799,9 +799,9 @@ above is an abbreviated form of the following equivalent code:
 > // Add 3 more elements to the bigger array nums\[n++\] = 997;
 > nums\[n++\] = 998; nums\[n++\] = 999;
 >
-> // Print the larger array with the added elements cout &lt;&lt; endl
-> &lt;&lt; "Larger array" &lt;&lt; endl; for (int i = 0; i &lt; n; i++)
-> { cout &lt;&lt; nums\[i\] &lt;&lt; " ";
+> // Print the larger array with the added elements cout << endl
+> << "Larger array" << endl; for (int i = 0; i < n; i++)
+> { cout << nums\[i\] << " ";
 >
 > } return 0; }
 >
@@ -862,7 +862,7 @@ SELF-CHECK
 >
 > int\* x = new int\[10\]; x\[0\] = 4; x\[1\] = 8;
 >
-> cout &lt;&lt; x\[0\] + x\[1\] &lt;&lt; endl;
+> cout << x\[0\] + x\[1\] << endl;
 >
 > 12-15 Write one initialization using new to allocate an array that can
 > store 1000 doubles.
@@ -874,11 +874,11 @@ SELF-CHECK
 >
 > const int MAX = 6; int\* x = new int\[MAX\];
 >
-> for(int i = 0; i &lt; MAX; i++) { x\[i\] = 2 \* i;
+> for(int i = 0; i < MAX; i++) { x\[i\] = 2 \* i;
 >
 > }
 >
-> for(int i = 0; i &lt; MAX; i++) { cout &lt;&lt; x\[i\] &lt;&lt; " "; }
+> for(int i = 0; i < MAX; i++) { cout << x\[i\] << " "; }
 >
 > 12-18 Primitive arrays can be declared and initialized at the same
 > time with array initializers such as the following:
@@ -923,7 +923,7 @@ SELF-CHECK
 >
 > // Allocate and deallocate memory at runtime
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > int main() { int\* p = new int; \*p = 123;
 >
@@ -945,7 +945,7 @@ SELF-CHECK
 > notifi cations or errors shown. Instead, we get memory leaks, which
 > means memory no longer needed cannot be recycled later.
 >
-> double\* temp = new double\[n+5\]; for (int i = 0; i &lt; 10; i++) {
+> double\* temp = new double\[n+5\]; for (int i = 0; i < 10; i++) {
 > temp\[i\] = nums\[i\]; } delete\[\] nums; // Avoid a memory leak by
 > freeing up memory
 
@@ -1013,24 +1013,24 @@ LinkedList:
 > \#endif /\* LINKEDLIST\_H\_ \*/
 >
 > Th e following code constructs a new node object pointed to by rst and
-> displays the value using the -&gt; operator, which is necessary for
+> displays the value using the -> operator, which is necessary for
 > dereferencing the public data members of node.
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;string&gt;
+> \#include <string>
 >
 > \#include "LinkedList.h" using namespace std;
 >
 > int main() {
 >
 > // Let nodePointer reference a dynamically allocated node object
-> node\* rst = new node("Kim"); // assert: nodePointer-&gt;next ==
+> node\* rst = new node("Kim"); // assert: nodePointer->next ==
 > nullptr
 >
-> // Display the state of the public data member my\_data cout &lt;&lt;
-> " The value: " &lt;&lt; rst-&gt;data &lt;&lt; endl; cout &lt;&lt;
-> "\#characters: " &lt;&lt; rst-&gt;data.length() &lt;&lt; endl; }
+> // Display the state of the public data member my\_data cout <<
+> " The value: " << rst->data << endl; cout <<
+> "\#characters: " << rst->data.length() << endl; }
 >
 > **Output:**
 >
@@ -1046,15 +1046,15 @@ Here is a representation of what this looks like in memory:
 > such a way that the pointer in the fi rst node object can be used to
 > fi nd the second node. Th e following code constructs three node
 > objects that are linked together. Notice that a reference to the data
-> of the second node is made using the pointer p &gt;next.
+> of the second node is made using the pointer p >next.
 >
 > // Build the rst node node\* p = new node("One");
 >
 > // Construct a second node pointed to by the rst node's next
-> p-&gt;next = new node("Two");
+> p->next = new node("Two");
 >
-> // Build a third node pointed to by p-&gt;next-&gt;next
-> p-&gt;next-&gt;next = new node("Three");
+> // Build a third node pointed to by p->next->next
+> p->next->next = new node("Three");
 
 Here is a representation of what three linked nodes look like in memory:
 
@@ -1065,11 +1065,11 @@ Here is a representation of what three linked nodes look like in memory:
 >
 > // Traverse the nodes until a next eld is nullptr node\* ptr = p; //
 > Don't change p, which is a pointer to the rst node while(ptr !=
-> nullptr) { cout &lt;&lt; ptr-&gt;data &lt;&lt; endl; ptr =
-> ptr-&gt;next; }
+> nullptr) { cout << ptr->data << endl; ptr =
+> ptr->next; }
 >
 > ptr is updated to point to the next node or it is set to nullptr at
-> the end of each loop iteration with the statement ptr = ptr &gt;next.
+> the end of each loop iteration with the statement ptr = ptr >next.
 
 12.5.1 A LIST CLASS USING THE SINGLY-LINKED DATA STRUCTURE
 
@@ -1097,20 +1097,20 @@ Here is a representation of what three linked nodes look like in memory:
 
 > Adding an element to a linked list has diff erent meanings for ordered
 > and unordered lists. An ordered list stores objects in an ascending
-> order based on the meaning of &lt;. Th e linked list developed here is
+> order based on the meaning of <. Th e linked list developed here is
 > not ordered so the elements will not be in alphabetic order. Since
 > this linked list here is unordered, all new elements can be added at
 > the very end of the list. Th is is easy when a dummy headed node is
 > employed to avoid the special case of adding to an empty list or
 > removing an element. Elements are added by creating a new object
-> pointed to by last-&gt;next. Th e member data last must then be
+> pointed to by last->next. Th e member data last must then be
 > updated to point to the last node. Th e current count must also be
 > incremented.
 >
 > void add(const std::string newElement) { // Allocate and initialize a
-> new node last-&gt;next = new node(newElement);
+> new node last->next = new node(newElement);
 >
-> // Update the last pointer last = last-&gt;next;
+> // Update the last pointer last = last->next;
 >
 > // Maintain current size n++; }
 
@@ -1125,14 +1125,14 @@ Th is one adds message results in the pictures of memory shown below:
 > Th e get operation uses a for loop to advance an external pointer ptr
 > to the correct node. Notice that if index is 0, the for loop does not
 > advance ptr, leaving it to point to the fi rst real node— the one
-> pointed to by header-&gt;next, which would be the value " rst".
+> pointed to by header->next, which would be the value " rst".
 >
-> std::string get(int index) { node\* ptr = rst-&gt;next; for (int i =
-> 0; i &lt; index; i++) { ptr = ptr-&gt;next;
+> std::string get(int index) { node\* ptr = rst->next; for (int i =
+> 0; i < index; i++) { ptr = ptr->next;
 >
 > }
 >
-> return ptr-&gt;data; }
+> return ptr->data; }
 
 12.5.4 remove(string removalCandidate)
 
@@ -1153,19 +1153,19 @@ Th is one adds message results in the pictures of memory shown below:
 > node ahead in the search while maintaining a pointer to the node that
 > precedes the node to be removed.
 >
-> A sequential search continues until ptr-&gt;next-&gt;data equals the
+> A sequential search continues until ptr->next->data equals the
 > removalCandidate or there are no more elements to search. Since
-> ptr-&gt;data == removalElement ("First" == "Second") is false, the
+> ptr->data == removalElement ("First" == "Second") is false, the
 > loop advances ptr to the next node in the list.
 >
 > Now the node pointed to by ptr points to the node before the node to
-> be removed: ptr-&gt;next-&gt;data == "Second" is true now. With the
+> be removed: ptr->next->data == "Second" is true now. With the
 > help of the dummy header node, this algorithm is able to peek at the
 > data one node ahead. Th is comes in handy as we need to send a pointer
-> around the node to be deleted with ptr-&gt;next =
-> ptr-&gt;next-&gt;next.
+> around the node to be deleted with ptr->next =
+> ptr->next->next.
 >
-> Now the node pointed to ptr-&gt;next can safely be returned to the
+> Now the node pointed to ptr->next can safely be returned to the
 > free store with delete.
 >
 > bool remove(const std::string removalElement) {
@@ -1177,25 +1177,25 @@ Th is one adds message results in the pictures of memory shown below:
 >
 > // found or the end of the list is found
 >
-> while (ptr-&gt;next != nullptr && ptr-&gt;next-&gt;data !=
-> removalElement) { ptr = ptr-&gt;next; }
+> while (ptr->next != nullptr && ptr->next->data !=
+> removalElement) { ptr = ptr->next; }
 >
 > // Don't delete a nonexistent node
 >
-> if (ptr-&gt;next == nullptr) { // removalElement was not found return
+> if (ptr->next == nullptr) { // removalElement was not found return
 > false;
 >
 > } else {
 >
 > // Check if the last node is being removed so last gets corrected
-> if(ptr-&gt;next == last) { last = ptr;
+> if(ptr->next == last) { last = ptr;
 >
 > }
 >
-> // Send the link around the node to be removed ptr-&gt;next =
-> ptr-&gt;next-&gt;next; if (ptr != header)
+> // Send the link around the node to be removed ptr->next =
+> ptr->next->next; if (ptr != header)
 >
-> delete ptr-&gt;next; // Deallocate memory n--; // Maintain current
+> delete ptr->next; // Deallocate memory n--; // Maintain current
 > size return true; // Report successful removal
 >
 > }
@@ -1238,9 +1238,9 @@ e.  When an element has been removed from a dynamically linked list, the
 > LinkedList. Return false if the list is empty. Th e program should
 > generate the output shown in comments.
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;string&gt;
+> \#include <string>
 >
 > \#include "LinkedList.h" using namespace std;
 >
@@ -1248,15 +1248,15 @@ e.  When an element has been removed from a dynamically linked list, the
 >
 > LinkedList list;
 >
-> cout &lt;&lt; list.removeLast() &lt;&lt; endl; // 0 list.add("A");
+> cout << list.removeLast() << endl; // 0 list.add("A");
 >
-> cout &lt;&lt; list.removeLast() &lt;&lt; endl; // 1 list.add("B");
+> cout << list.removeLast() << endl; // 1 list.add("B");
 > list.add("C"); list.add("D");
 >
-> cout &lt;&lt; list.removeLast() &lt;&lt; endl; // 1 list.add("E");
-> cout &lt;&lt; list.get(0) &lt;&lt; " "; cout &lt;&lt; list.get(1)
-> &lt;&lt; " "; cout &lt;&lt; list.get(2) &lt;&lt; endl; // B C E cout
-> &lt;&lt; list.size() &lt;&lt; endl; // 3 return 0; }
+> cout << list.removeLast() << endl; // 1 list.add("E");
+> cout << list.get(0) << " "; cout << list.get(1)
+> << " "; cout << list.get(2) << endl; // B C E cout
+> << list.size() << endl; // 3 return 0; }
 
 CHAPTER SUMMARY
 
@@ -1372,8 +1372,8 @@ p1 p2 p3
 
 > int \* intPtr; int anInt = 987; intPtr = &anInt;
 >
-> \*intPtr = \*intPtr + 111; cout &lt;&lt; \*intPtr &lt;&lt; " "
-> &lt;&lt; anInt;
+> \*intPtr = \*intPtr + 111; cout << \*intPtr << " "
+> << anInt;
 
 1.  Trace the following program segment by drawing pictures of the
     > modifi ed objects:
@@ -1419,9 +1419,9 @@ Programming Projects
 > from the stack before the fi rst-pushed element can be referenced.
 > Here is a stack program for storing strings:
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;string&gt; // Needed by Visual Studio
+> \#include <string> // Needed by Visual Studio
 >
 > \#include "LinkedStack.h" using namespace std;
 >
@@ -1430,17 +1430,17 @@ Programming Projects
 > // Use intStack stack.push("a"); stack.push("b"); stack.push("c");
 > stack.push("d");
 >
-> cout &lt;&lt; "d? " &lt;&lt; stack.peek() &lt;&lt; endl; cout &lt;&lt;
-> "d? " &lt;&lt; stack.pop() &lt;&lt; endl; cout &lt;&lt; "c? " &lt;&lt;
-> stack.peek() &lt;&lt; endl;
+> cout << "d? " << stack.peek() << endl; cout <<
+> "d? " << stack.pop() << endl; cout << "c? " <<
+> stack.peek() << endl;
 >
-> cout &lt;&lt; "isEmpty 0? " &lt;&lt; stack.isEmpty() &lt;&lt; endl;
-> cout &lt;&lt; "c b a? "; while(! stack.isEmpty()) { cout &lt;&lt;
-> stack.pop() &lt;&lt; " ";
+> cout << "isEmpty 0? " << stack.isEmpty() << endl;
+> cout << "c b a? "; while(! stack.isEmpty()) { cout <<
+> stack.pop() << " ";
 >
-> } cout &lt;&lt; endl;
+> } cout << endl;
 >
-> cout &lt;&lt; "isEmpty 1? " &lt;&lt; stack.isEmpty() &lt;&lt; endl;
+> cout << "isEmpty 1? " << stack.isEmpty() << endl;
 >
 > return 0; }
 >
@@ -1468,7 +1468,7 @@ Programming Projects
 > at index 0 is considered to have higher priority than the element at
 > index 1. Th e element at index size()-1 has the lowest priority. An
 > instance of this collection class will be able to store just one type
-> of element such as &lt;string&gt;.
+> of element such as <string>.
 >
 > Output
 >
@@ -1489,7 +1489,7 @@ Programming Projects
 > // Return the number of elements currently in this LinkedPriorityList
 > int size();
 >
-> // Return true if size() == 0 or false if size() &gt; 0 bool
+> // Return true if size() == 0 or false if size() > 0 bool
 > isEmpty();
 >
 > // Insert the element at the given index.
@@ -1541,7 +1541,7 @@ Programming Projects
 > list. Recommended: implement one member function at a time, and write
 > tests to ensure that it works.
 >
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
 > \#include "LinkedPriorityList.h" using namespace std;
 >
@@ -1551,62 +1551,62 @@ Programming Projects
 > list.insertElementAt(1, "b"); list.insertElementAt(2, "c");
 > list.insertElementAt(3, "d");
 >
-> for (int i = 0; i &lt; list.size(); i++) // a b c d cout &lt;&lt;
-> list.getElementAt(i) &lt;&lt; " "; cout &lt;&lt; endl;
+> for (int i = 0; i < list.size(); i++) // a b c d cout <<
+> list.getElementAt(i) << " "; cout << endl;
 >
 > list.insertElementAt(1, "f");
 >
-> for (int i = 0; i &lt; list.size(); i++) // a f b c d cout &lt;&lt;
-> list.getElementAt(i) &lt;&lt; " "; cout &lt;&lt; endl;
+> for (int i = 0; i < list.size(); i++) // a f b c d cout <<
+> list.getElementAt(i) << " "; cout << endl;
 >
 > list.removeElementAt(0);
 >
-> for (int i = 0; i &lt; list.size(); i++) // f b c d cout &lt;&lt;
-> list.getElementAt(i) &lt;&lt; " "; cout &lt;&lt; endl;
+> for (int i = 0; i < list.size(); i++) // f b c d cout <<
+> list.getElementAt(i) << " "; cout << endl;
 >
 > list.lowerPriorityOf(3); // no effect list.lowerPriorityOf(0); // move
 > f right list.lowerPriorityOf(1); // move f right
-> list.lowerPriorityOf(2); // move f right for (int i = 0; i &lt;
-> list.size(); i++) // b c d f cout &lt;&lt; list.getElementAt(i)
-> &lt;&lt; " "; cout &lt;&lt; endl;
+> list.lowerPriorityOf(2); // move f right for (int i = 0; i <
+> list.size(); i++) // b c d f cout << list.getElementAt(i)
+> << " "; cout << endl;
 >
 > list.raisePriorityOf(0); // no effect list.raisePriorityOf(2); // move
-> d left list.raisePriorityOf(1); // move d left for (int i = 0; i &lt;
-> list.size(); i++) // d b c f cout &lt;&lt; list.getElementAt(i)
-> &lt;&lt; " "; cout &lt;&lt; endl;
+> d left list.raisePriorityOf(1); // move d left for (int i = 0; i <
+> list.size(); i++) // d b c f cout << list.getElementAt(i)
+> << " "; cout << endl;
 >
 > list.moveToLast(list.size() - 1); // no effect
 >
 > list.moveToLast(0); // move d from top priority to last priority for
-> (int i = 0; i &lt; list.size(); i++) // b c f d cout &lt;&lt;
-> list.getElementAt(i) &lt;&lt; " "; cout &lt;&lt; endl;
+> (int i = 0; i < list.size(); i++) // b c f d cout <<
+> list.getElementAt(i) << " "; cout << endl;
 >
 > list.moveToTop(0); // no effect
 >
 > list.moveToTop(2); // move f to top priority again for (int i = 0; i
-> &lt; list.size(); i++) // f b c d cout &lt;&lt; list.getElementAt(i)
-> &lt;&lt; " ";
+> < list.size(); i++) // f b c d cout << list.getElementAt(i)
+> << " ";
 >
 > return 0; }
 
-12D LinkedPriorityList&lt;Type&gt; THROWS EXCEPTIONS
+12D LinkedPriorityList<Type> THROWS EXCEPTIONS
 
 > Change your code so it throws an exception when the index is out of
 > range. To do this, fi rst add this \#include to
-> PriorityList&lt;Type&gt;:
+> PriorityList<Type>:
 >
-> \#include &lt;stdexcept&gt;
+> \#include <stdexcept>
 >
 > Th en add an if statement to every method that takes index as a
 > parameter. An exception will be thrown if the programmer supplies an
-> incorrect index like -1 or an index &gt; size(), which is a good
+> incorrect index like -1 or an index > size(), which is a good
 > thing:
 >
 > // Insert the element at the given index.
 >
 > // precondition: index is on the range of 0 through size() void
-> insertElementAt(int index, Type element) { if (index &lt; 0 || index
-> &gt; size()) { throw std::invalid\_argument(
+> insertElementAt(int index, Type element) { if (index < 0 || index
+> > size()) { throw std::invalid\_argument(
 >
 > "\\ninsertElementAt: index must be 0..size()");
 >
