--- a/translation/13_第十三章.md
+++ b/translation/13_第十三章.md
@@ -32,14 +32,14 @@ COMING UP
 
 **General Form 13.1** *Constructing a* vector *of* vector*s*
 
-> vector &lt;vector&lt;*type*&gt; &gt; *identi er*(*rows*,
-> vector&lt;*type*&gt; (*cols*, *initialValueoptional*));
+> vector <vector<*type*> > *identi er*(*rows*,
+> vector<*type*> (*cols*, *initialValueoptional*));
 >
 > Th e following are example constructions:
 >
-> vector &lt;vector&lt;double&gt; &gt; table(4, vector&lt;double&gt; (8,
-> 0.0)); // 32 zeros vector &lt;vector&lt;string&gt; &gt; name(5,
-> vector&lt;string&gt; (100, "TBA")); // 500 TBAs
+> vector <vector<double> > table(4, vector<double> (8,
+> 0.0)); // 32 zeros vector <vector<string> > name(5,
+> vector<string> (100, "TBA")); // 500 TBAs
 >
 > 377
 >
@@ -64,15 +64,15 @@ COMING UP
 
 *Make sure you have one space here with older versions of C++.*
 
-> vector &lt;vector&lt;int&gt; &gt; nums(3, vector&lt;int&gt; (5));
+> vector <vector<int> > nums(3, vector<int> (5));
 >
 > int count = 1;
 >
-> for(int row = 0; row &lt; nums.size(); row++) {
+> for(int row = 0; row < nums.size(); row++) {
 >
 > // Initialize one row
 >
-> for(int col = 0; col &lt; nums\[row\].size(); col++) {
+> for(int col = 0; col < nums\[row\].size(); col++) {
 > nums\[row\]\[col\] = count; count++; }
 
 SELF-CHECK
@@ -123,20 +123,20 @@ vector of vectors?
 >
 > \#ifndef MATRIX\_H\_
 >
-> \#de ne MATRIX\_H\_ \#include &lt;vector&gt; class Matrix { private:
+> \#de ne MATRIX\_H\_ \#include <vector> class Matrix { private:
 >
 > int rows, columns;
 >
-> // Make sure there is a space between &gt; and &gt;
+> // Make sure there is a space between > and >
 >
-> // || std::vector&lt;std::vector&lt;int&gt; &gt; table; public:
+> // || std::vector<std::vector<int> > table; public:
 >
 > // Construct a new Matrix and read data from an input le
 > Matrix(std::string leName);
 >
 > // Construct a new Matrix given a vector of vectors
 >
-> Matrix(const std::vector&lt;std::vector&lt;int&gt; &gt; & vecOfVecs);
+> Matrix(const std::vector<std::vector<int> > & vecOfVecs);
 >
 > // Return a string representation of this object.
 >
@@ -188,9 +188,9 @@ vector of vectors?
 >
 > \*/
 >
-> \#include &lt;string&gt;
+> \#include <string>
 >
-> \#include &lt;fstream&gt;
+> \#include <fstream>
 >
 > \#include "Matrix.h" using namespace std;
 >
@@ -199,17 +199,17 @@ vector of vectors?
 >
 > Matrix::Matrix(string leName) { rows = columns = 0; // Avoid a warning
 > from one compiler // Make sure the le named lename is stored in the
-> same directory ifstream inFile( leName); inFile &gt;&gt; rows &gt;&gt;
+> same directory ifstream inFile( leName); inFile >> rows >>
 > columns;
 >
 > // Resize the vector of vectors to any capacity at runtime
 > (dynamically).
 >
-> table.resize(rows, vector&lt;int&gt;(columns));
+> table.resize(rows, vector<int>(columns));
 >
 > // Initialize the vector of vectors from le input for (int row = 0;
-> row &lt; rows; row++) { for (int col = 0; col &lt; columns; col++) {
-> inFile &gt;&gt; table\[row\]\[col\];
+> row < rows; row++) { for (int col = 0; col < columns; col++) {
+> inFile >> table\[row\]\[col\];
 >
 > }
 >
@@ -224,8 +224,8 @@ vector of vectors?
 >
 > string Matrix::toString() { string result("");
 >
-> // Concatenate all elements into one string for (int i = 0; i &lt;
-> rows; i++) { for (int j = 0; j &lt; columns; j++) {
+> // Concatenate all elements into one string for (int i = 0; i <
+> rows; i++) { for (int j = 0; j < columns; j++) {
 >
 > result = result + std::to\_string((int) table\[i\]\[j\]) + " ";
 >
@@ -241,11 +241,11 @@ vector of vectors?
 > Matrix after using fi le input to initialize the individual Matrix
 > elements:
 >
-> \#include "Matrix.h" \#include &lt;iostream&gt; using namespace std;
+> \#include "Matrix.h" \#include <iostream> using namespace std;
 >
 > int main() {
 >
-> Matrix m("matrix.data"); cout &lt;&lt; m.toString();
+> Matrix m("matrix.data"); cout << m.toString();
 >
 > return 0; }
 >
@@ -268,8 +268,8 @@ vector of vectors?
 > Th is operation is implemented below as a modifi er that changes the
 > state of the matrix object:
 >
-> void Matrix::scalarMultiply(int val) { for (int i = 0; i &lt; rows;
-> i++) { for (int j = 0; j &lt; columns; j++) { table\[i\]\[j\] \*= val;
+> void Matrix::scalarMultiply(int val) { for (int i = 0; i < rows;
+> i++) { for (int j = 0; j < columns; j++) { table\[i\]\[j\] \*= val;
 >
 > }
 >
@@ -280,7 +280,7 @@ vector of vectors?
 Each element is multiplied by the argument, so this code produces the
 output shown:
 
-> m.scalarMultiply(3); cout &lt;&lt; m.toString() &lt;&lt; endl;
+> m.scalarMultiply(3); cout << m.toString() << endl;
 >
 > Output
 >
@@ -313,7 +313,7 @@ To allow code like this to return a new Matrix,
 >
 > // Construct a new Matrix object given a vector of vectors
 >
-> Matrix::Matrix(const std::vector&lt;std::vector&lt;int&gt; &gt; &
+> Matrix::Matrix(const std::vector<std::vector<int> > &
 > vecOfVecs) { rows = vecOfVecs.size(); columns = vecOfVecs\[0\].size();
 > table = vecOfVecs; }
 
@@ -321,9 +321,9 @@ Th is will be called to construct a new Matrix object returned by add:
 
 > Matrix Matrix::add(Matrix other) {
 >
-> vector&lt;vector&lt;int&gt; &gt; temp(rows,
-> vector&lt;int&gt;(columns)); for (int i = 0; i &lt; rows; i++) { for
-> (int j = 0; j &lt; columns; j++) {
+> vector<vector<int> > temp(rows,
+> vector<int>(columns)); for (int i = 0; i < rows; i++) { for
+> (int j = 0; j < columns; j++) {
 >
 > temp\[i\]\[j\] += table\[i\]\[j\] + other.table\[i\]\[j\];
 >
@@ -336,10 +336,10 @@ Th is will be called to construct a new Matrix object returned by add:
 > Using input fi les representing the three matrices above, this code
 > will generate the output shown:
 >
-> cout &lt;&lt; "Matrix a: " &lt;&lt; endl &lt;&lt; a.toString()
-> &lt;&lt; endl; cout &lt;&lt; "Matrix b: " &lt;&lt; endl &lt;&lt;
-> b.toString() &lt;&lt; endl; cout &lt;&lt; "Matrix c: " &lt;&lt; endl
-> &lt;&lt; c.toString() &lt;&lt; endl;
+> cout << "Matrix a: " << endl << a.toString()
+> << endl; cout << "Matrix b: " << endl <<
+> b.toString() << endl; cout << "Matrix c: " << endl
+> << c.toString() << endl;
 >
 > Output
 >
@@ -403,17 +403,17 @@ In the next problems, use this 2 × 2 Matrix:
   ------------------------------------------------------------------------------------------------------------------------------------------
                        **vector of vectors**                                                   **Primitive C Array**
   -------------------- ----------------------------------------------------------------------- ---------------------------------------------
-  > **General Form**   vector &lt;vector&lt;*type*&gt; &gt;                                    *type* *identi er* \[*rows*\]\[*columns*\];
+  > **General Form**   vector <vector<*type*> >                                    *type* *identi er* \[*rows*\]\[*columns*\];
                                                                                                
-                       *identi er* (*rows*, vector&lt;*type*&gt;(*columns*));                  
+                       *identi er* (*rows*, vector<*type*>(*columns*));                  
 
-  > **Example**        vector &lt;vector&lt;int&gt; &gt; unitsSold(4, vector&lt;int&gt;(6));   int unitsSold \[4\]\[6\];
+  > **Example**        vector <vector<int> > unitsSold(4, vector<int>(6));   int unitsSold \[4\]\[6\];
 
   > **Range Check**    Yes                                                                     No
 
   > **Resizable**      Yes                                                                     No
 
-  > **\#include**      \#include&lt;vector&gt;                                                 Not needed
+  > **\#include**      \#include<vector>                                                 Not needed
   ------------------------------------------------------------------------------------------------------------------------------------------
 
 > Th e vector of vectors, unitsSold, manages four rows and six columns
@@ -427,16 +427,16 @@ In the next problems, use this 2 × 2 Matrix:
 > used with either a vector of vectors or a primitive doubly subscripted
 > C array:
 >
-> int unitsSold\[4\]\[6\]; // vector&lt;vector&lt;int&gt; &gt;
-> unitsSold(4, vector&lt;int&gt;(6));
+> int unitsSold\[4\]\[6\]; // vector<vector<int> >
+> unitsSold(4, vector<int>(6));
 >
-> for (int r = 0; r &lt; 4; r++) { for (int c = 0; c &lt; 6; c++)
+> for (int r = 0; r < 4; r++) { for (int c = 0; c < 6; c++)
 > unitsSold\[r\]\[c\] = r + c; }
 >
-> for (int r = 0; r &lt; 4; r++) { for (int c = 0; c &lt; 6; c++) { cout
-> &lt;&lt; unitsSold\[r\]\[c\] &lt;&lt; " ";
+> for (int r = 0; r < 4; r++) { for (int c = 0; c < 6; c++) { cout
+> << unitsSold\[r\]\[c\] << " ";
 >
-> } cout &lt;&lt; endl;
+> } cout << endl;
 >
 > }
 
@@ -498,13 +498,13 @@ SELF-CHECK
 >
 > // could also use a vector of Matrix objects to do the same thing.
 >
-> \#include &lt;iostream&gt; using namespace std;
+> \#include <iostream> using namespace std;
 >
 > int main() { const int courses = 3; const int students = 11; const int
 > quizzes = 6; int q\[courses\]\[students\]\[quizzes\];
 >
-> for (int c = 0; c &lt; courses; c++) { for (int row = 0; row &lt;
-> students; row++) { for (int col = 0; col &lt; quizzes; col++) {
+> for (int c = 0; c < courses; c++) { for (int row = 0; row <
+> students; row++) { for (int col = 0; col < quizzes; col++) {
 >
 > // Give each quiz a value using a meaningless formula
 > q\[c\]\[col\]\[row\] = (col + 1) \* (row + 2) + c + 25;
@@ -515,18 +515,18 @@ SELF-CHECK
 >
 > }
 >
-> for (int course = 0; course &lt; courses; course++) { cout &lt;&lt;
+> for (int course = 0; course < courses; course++) { cout <<
 > endl;
 >
-> cout &lt;&lt; "Course \#" &lt;&lt; course &lt;&lt; endl; for (int row
-> = 0; row &lt; students; row++) { cout.width(3); cout &lt;&lt; row
-> &lt;&lt; ": ";
+> cout << "Course \#" << course << endl; for (int row
+> = 0; row < students; row++) { cout.width(3); cout << row
+> << ": ";
 >
-> for (int col = 0; col &lt; quizzes; col++) { cout.width(4);
+> for (int col = 0; col < quizzes; col++) { cout.width(4);
 >
-> cout &lt;&lt; q\[course\]\[col\]\[row\];
+> cout << q\[course\]\[col\]\[row\];
 >
-> } cout &lt;&lt; endl;
+> } cout << endl;
 >
 > }
 >
@@ -634,10 +634,10 @@ EXERCISES
 
     b.  Th e value of all elements
 
-> vector&lt;vector&lt;string&gt; &gt; teacher(5, vector&lt;string&gt;(7,
-> "to hire")); vector&lt;vector&lt;double&gt; &gt; quiz(10,
-> vector&lt;double&gt;(32, 0.0)); vector&lt;vector&lt;int&gt; &gt;
-> nums(10, vector&lt;int&gt;(10, -999)); double budget\[6\]\[100\];
+> vector<vector<string> > teacher(5, vector<string>(7,
+> "to hire")); vector<vector<double> > quiz(10,
+> vector<double>(32, 0.0)); vector<vector<int> >
+> nums(10, vector<int>(10, -999)); double budget\[6\]\[100\];
 
 1.  Detect the error(s) in the following attempts to declare a doubly
     > subscripted vector:
@@ -646,7 +646,7 @@ EXERCISES
 
     b.  double x\[5,6\];
 
-    c.  vector&lt;vector&lt;int&gt; &gt; x(5, 6);
+    c.  vector<vector<int> > x(5, 6);
 
 2.  Declare a doubly subscripted object identifi ed with three rows and
     > four columns of fl oatingpoint numbers.
@@ -670,34 +670,34 @@ EXERCISES
   c.   \# rows? ***4***   f.   \# rows? ***2***
        \# cols? ***4***        \# cols? ***1***
 
-> \#include &lt;iostream&gt;
+> \#include <iostream>
 >
-> \#include &lt;vector&gt; using namespace std;
+> \#include <vector> using namespace std;
 >
-> int main() { int maxRow, maxCol; cout &lt;&lt; "\# rows? "; cin
-> &gt;&gt; maxRow; cout &lt;&lt; "\# cols? "; cin &gt;&gt; maxCol;
+> int main() { int maxRow, maxCol; cout << "\# rows? "; cin
+> >> maxRow; cout << "\# cols? "; cin >> maxCol;
 >
-> vector&lt;vector&lt;int&gt; &gt; aTable(maxRow,
-> vector&lt;int&gt;(maxCol, -999));
+> vector<vector<int> > aTable(maxRow,
+> vector<int>(maxCol, -999));
 >
 > // Initialize Matrix elements
 
 Exercises
 
-> for (int row = 0; row &lt; maxRow; row++) { for (int col = 0; col &lt;
+> for (int row = 0; row < maxRow; row++) { for (int col = 0; col <
 > maxCol; col++) { aTable\[row\]\[col\] = row \* col;
 >
 > }
 >
 > }
 >
-> // Display table elements for (int row = 0; row &lt; maxRow; row++) {
-> for (int col = 0; col &lt; maxCol; col++) { cout.width(5); cout
-> &lt;&lt; aTable\[row\]\[col\];
+> // Display table elements for (int row = 0; row < maxRow; row++) {
+> for (int col = 0; col < maxCol; col++) { cout.width(5); cout
+> << aTable\[row\]\[col\];
 >
 > }
 >
-> cout &lt;&lt; endl;
+> cout << endl;
 >
 > } return 0; }
 >
@@ -710,7 +710,7 @@ Exercises
 >
 > int lastRow, lastCol;
 >
-> std::vector &lt;std:vector&lt;int&gt; &gt; m; };
+> std::vector <std:vector<int> > m; };
 >
 > huh::huh(int initLastRow, int initLastColumn) { lastRow = initLastRow;
 > lastCol = initLastColumn; // The vector of vectors must be initialized
@@ -719,9 +719,9 @@ Exercises
 > // Use a resize message with two arguments to avoid a loop for each
 > row.
 >
-> m.resize(lastRow, vector&lt;int&gt;(lastCol));
+> m.resize(lastRow, vector<int>(lastCol));
 >
-> for(int row = 0; row &lt; lastRow; row++) { for(int col = 0; col &lt;
+> for(int row = 0; row < lastRow; row++) { for(int col = 0; col <
 > lastCol; col++) { // Give each item a meaningless formula
 > m\[row\]\[col\] = (row + 1) + (col + 1);
 >
@@ -733,12 +733,12 @@ Exercises
 >
 > void huh::show() const { int row, col;
 >
-> for(row = 0; row &lt; lastRow; row++) { for(col = 0; col &lt; lastCol;
-> col++) { cout.width(4); cout &lt;&lt; m\[row\]\[col\];
+> for(row = 0; row < lastRow; row++) { for(col = 0; col < lastCol;
+> col++) { cout.width(4); cout << m\[row\]\[col\];
 >
 > }
 >
-> cout &lt;&lt; endl;
+> cout << endl;
 >
 > }
 >
@@ -760,7 +760,7 @@ Exercises
     > the elements in a given row. Th e program below must generate the
     > output of 22.
 
-> int main() { huh h(4, 4); cout &lt;&lt; h.rowSum(2); return 0; }
+> int main() { huh h(4, 4); cout << h.rowSum(2); return 0; }
 
 6.  Complete the member function huh::showDiagonal that prints all
     > elements on the diagonal. Assume rows and columns are the same. Th
@@ -802,10 +802,10 @@ Exercises
 PROGRAMMING TIPS
 
 1.  When constructing vectors of vectors, be careful not to
-    > write &gt;&gt; in your constructions with some compilers.
+    > write >> in your constructions with some compilers.
 
-> vector&lt;vector&lt;int&gt;&gt; error(10, vector&lt;int&gt; (10, -1));
-> // Error: Need space between &gt; and &gt;
+> vector<vector<int>> error(10, vector<int> (10, -1));
+> // Error: Need space between > and >
 
 1.  When using vectors of vectors, consider using the range-checking
     > member function vector::at, especially when fi rst using
@@ -813,9 +813,9 @@ PROGRAMMING TIPS
     > check the subscripts, but it can be made to do so with the
     > vector::at member function.
 
-> vector&lt;vector&lt;int&gt; &gt; aTable(3, vector&lt;int&gt; (3, -1));
+> vector<vector<int> > aTable(3, vector<int> (3, -1));
 > aTable.at(2).at(3) = 23; // Column 3 out of bounds aTable.at(3).at(2)
-> = 32; // Row 3 out of bounds cout &lt;&lt; aTable.at(0).at(0); //
+> = 32; // Row 3 out of bounds cout << aTable.at(0).at(0); //
 > Output: -1
 >
 > It is common to get a subscript variable that is out of bounds. Th e
@@ -834,10 +834,10 @@ PROGRAMMING TIPS
         > needs to be copied. However, when a Matrix is passed as a
         > value parameter, every single element gets copied, making the
         > program less effi cient. void function(const
-        > Matrix&lt;double&gt; & m) // Pass by const reference is more
+        > Matrix<double> & m) // Pass by const reference is more
         > effi cient than
 
-> void function(Matrix&lt;double&gt; m)
+> void function(Matrix<double> m)
 
 -   Range checking should be employed while you are learning to
     > manipulate doubly subscript-ed objects.
@@ -888,10 +888,10 @@ PROGRAMMING TIPS
 > You will need to resize the vector of vectors instance variable which
 > can be done like this:
 >
-> // An instance variable vector&lt;vector&lt;int&gt; &gt; magic;
+> // An instance variable vector<vector<int> > magic;
 >
 > // Resize the vector to be a size by size vector magic =
-> vector&lt;vector&lt;int&gt; &gt;(size, vector&lt;int&gt;(size));
+> vector<vector<int> >(size, vector<int>(size));
 
 13B GAME OF LIFE
 
@@ -960,7 +960,7 @@ PROGRAMMING TIPS
 >
 > GameOfLife society("5by7");
 >
-> for (int updates = 1; updates &lt;= 5; updates++) {
+> for (int updates = 1; updates <= 5; updates++) {
 > society.toString(); society.update();
 >
 > } return 0; }
@@ -979,9 +979,9 @@ PROGRAMMING TIPS
 
 \#ifndef GAMEOFLIFE\_H\_ \#de ne GAMEOFLIFE\_H\_
 
-\#include &lt;vector&gt; \#include &lt;string&gt; class GameOfLife {
+\#include <vector> \#include <string> class GameOfLife {
 
-private: std::vector&lt;std::vector&lt;bool&gt; &gt; theSociety; int
+private: std::vector<std::vector<bool> > theSociety; int
 nRows; int nCols;
 
 public: /\*
@@ -1051,7 +1051,7 @@ bool cellAt(int row, int col);
 
 -   society.growCellAt(3, 4);
 
--   cout &lt;&lt; society.toString();
+-   cout << society.toString();
 
 > \*
 
@@ -1133,7 +1133,7 @@ f g h
 > see the form that begins on the right shifted to be on the left due to
 > wraparound.
 
-\#include &lt;iostream&gt;\#include &lt;iostream&gt; using namespace
+\#include <iostream>\#include <iostream> using namespace
 std;using namespace std; \#include "GameOfLife.h"\#include
 "GameOfLife.h"
 
@@ -1143,13 +1143,13 @@ GameOfLife game(3, 8); GameOfLife society(5, 30);
 
 game.growCellAt(1, 2); society.growCellAt(1, 6); game.growCellAt(1, 3);
 society.growCellAt(2, 7); game.growCellAt(1, 4); society.growCellAt(2,
-8); cout &lt;&lt; game.toString(); society.growCellAt(3, 7);
+8); cout << game.toString(); society.growCellAt(3, 7);
 
 > society.growCellAt(3, 6);
 
-for (int t = 1; t &lt;= 5; t++) {
+for (int t = 1; t <= 5; t++) {
 
-game.update(); society.growCellAt(1, 16); cout &lt;&lt; game.toString();
+game.update(); society.growCellAt(1, 16); cout << game.toString();
 society.growCellAt(2, 17);
 
 } society.growCellAt(2, 18); return 0; society.growCellAt(3, 17); }
