--- a/translation/14_附录.md
+++ b/translation/14_附录.md
@@ -46,16 +46,16 @@ been omitted).
 >
 > 399
 >
-> 1-13 + - \* (also = output with cout&lt;&lt; and input with
-> cin&gt;&gt;)
+> 1-13 + - \* (also = output with cout<< and input with
+> cin>>)
 >
 > 1-14 Integers—numbers without a decimal point. Th e actual range of
 > integers is system dependent (unfortunately). Most C++ systems
 > implement int to store integers in the range of –2,147,483,648 to
 > 2,147,483,647.
 >
-> 1-15 + - \* (also = output with cout&lt;&lt; and input with
-> cin&gt;&gt; ) 1-16 A collection of characters.
+> 1-15 + - \* (also = output with cout<< and input with
+> cin>> ) 1-16 A collection of characters.
 
 1-17 oat, double, int, bool, char, short, unsigned int, unsigned long
 
@@ -88,7 +88,7 @@ k.  VALID
 
     3.  + - other possible answers , : ; ! ( ) = { }
 
-    4.  &lt;&lt; &gt;&gt; other possible answers != == &lt;= &gt;=
+    4.  << >> other possible answers != == <= >=
 
     5.  cin and cout (also string vector width sqrt)
 
@@ -112,18 +112,18 @@ e.  char literals: '\\n' 'h'
 
     10. string address;
 
-    11. \#include &lt;iostream&gt; using namespace std; int main() {
-        cout &lt;&lt; "Kim" &lt;&lt; endl; cout &lt;&lt; "Miller"
-        &lt;&lt; endl; return 0;
+    11. \#include <iostream> using namespace std; int main() {
+        cout << "Kim" << endl; cout << "Miller"
+        << endl; return 0;
 
 > }
 >
 > -or-
 >
-> \#include &lt;iostream&gt; int main() {
+> \#include <iostream> int main() {
 >
-> std::cout &lt;&lt; "Kim" &lt;&lt; std::endl; std::cout &lt;&lt;
-> "Miller" &lt;&lt; std::endl; return 0;
+> std::cout << "Kim" << std::endl; std::cout <<
+> "Miller" << std::endl; return 0;
 >
 > }
 
@@ -170,8 +170,8 @@ e.  char literals: '\\n' 'h'
 
 19. Th e predicted answer 25 does not match 0.04.
 
-20. change cin &gt;&gt; n to cin &gt;&gt; sum and cin &gt;&gt; sum to
-    > cin &gt;&gt; n.
+20. change cin >> n to cin >> sum and cin >> sum to
+    > cin >> n.
 
 21. a\. intent
 
@@ -405,7 +405,7 @@ c.  ostream e. istream
 
     11. . . . . . .
 
-. . &lt; .
+. . < .
 
 . . . . .
 
@@ -427,7 +427,7 @@ c.  ostream e. istream
 
     15. \#include "Grid.h"
 
-\#include &lt;iostream&gt; using namespace std; int main() {
+\#include <iostream> using namespace std; int main() {
 
 Grid g(5, 5, 2, 3, east); g.move(1);
 
@@ -555,11 +555,11 @@ b\. 40.0 d. 45.25
 
 b\. zero or pos
 
-7-6 if (option == 1) cout &lt;&lt; "My name" &lt;&lt; endl;
+7-6 if (option == 1) cout << "My name" << endl;
 
 else
 
-cout &lt;&lt; "My school" &lt;&lt; endl;
+cout << "My school" << endl;
 
 7-7 a. true e. true
 
@@ -569,9 +569,9 @@ c.  true g. true
 
 d.  false h. true
 
-    8.  (score &gt;= 1) && (score &lt;= 10)
+    8.  (score >= 1) && (score <= 10)
 
-    9.  (test &gt; 100) || (score &lt; 0)
+    9.  (test > 100) || (score < 0)
 
     10. President's list (always true because = was used instead of ==).
 
@@ -629,12 +629,12 @@ weather(40)); assert("toast" == weather(41)); return 0;
 
 24. Invalid
 
-25. Invalid 7-26 switch(choice) { case 1: cout &lt;&lt; "Favorite music
-    > is Jazz" &lt;&lt; endl; break; case 2: cout &lt;&lt; "Favorite
-    > food is Tacos" &lt;&lt; endl; break; case 3: cout &lt;&lt;
-    > "Favorite teacher is you" &lt;&lt; endl; break; default;
+25. Invalid 7-26 switch(choice) { case 1: cout << "Favorite music
+    > is Jazz" << endl; break; case 2: cout << "Favorite
+    > food is Tacos" << endl; break; case 3: cout <<
+    > "Favorite teacher is you" << endl; break; default;
 
-cout &lt;&lt; "Error" &lt;&lt; endl;
+cout << "Error" << endl;
 
 }
 
@@ -644,23 +644,23 @@ CHAPTER 8: REPETITION
 
 > 8-2 No, you can use increments of any amount, including negative
 > increments (or decrements). 8-3 No, consider the example for (int i =
-> 1; i &lt; n; i++) when n==0.
+> 1; i < n; i++) when n==0.
 >
 > 8-4 Consider if the update step does not increment j, or j is
 > decremented as much as it is incremented inside the loop: for (j = 1;
-> j &lt; n; j){ } *or* for (j = 1; j &lt; n; j++){j--;} 8-5 a. 1 2 3 4
+> j < n; j){ } *or* for (j = 1; j < n; j++){j--;} 8-5 a. 1 2 3 4
 > d. 0 1 2 3 4
 
 b.  1 2 3 4 5 e. 5 4 3 2 1
 
 c.  -3 -1 1 3 f. before after
 
-    6.  for (int i = 1; i &lt;= 100; i++) { cout &lt;&lt; i &lt;&lt;
+    6.  for (int i = 1; i <= 100; i++) { cout << i <<
         > endl;
 
 }
 
-6.  for (int i = 10; i &gt;= 1; i--) { cout &lt;&lt; i &lt;&lt; " ";
+6.  for (int i = 10; i >= 1; i--) { cout << i << " ";
 
 }
 
@@ -706,7 +706,7 @@ c.  -3 -1 1 3 f. before after
 
 b\. 80.0
 
-> 8-19 a. Observe the location of the second cin&gt;&gt;testScore. Redo
+> 8-19 a. Observe the location of the second cin>>testScore. Redo
 > till you arrive at the preceding answers of 56.3333 for a. and 80.0
 > for b.
 >
@@ -715,7 +715,7 @@ b\. 80.0
 >
 > 8-21 zero
 >
-> 8-22 Input another cin &gt;&gt; testscore at the bottom of the loop.
+> 8-22 Input another cin >> testscore at the bottom of the loop.
 >
 > 8-23 A tricky question: remove the ; after ). Th is loop does nothing
 > infi nitely because ; represents the null statement. It is legal code,
@@ -725,11 +725,11 @@ b\. 80.0
   ----------------- ------------------------------------------------
   8-25 a. unknown   d\. forever
   b\. forever       e\. 5
-  c\. 0             f\. forever notice the ; after count &gt;= 0);
+  c\. 0             f\. forever notice the ; after count >= 0);
 
 8-26 int sum = 0; int x = 0;
 
-while ( (cin &gt;&gt; x) && (x != 999) ) { sum += x;
+while ( (cin >> x) && (x != 999) ) { sum += x;
 
 }
 
@@ -744,16 +744,16 @@ while ( (cin &gt;&gt; x) && (x != 999) ) { sum += x;
 
 do {
 
-cout &lt;&lt; "Enter a number in the range of 1 through 10: "; cin
-&gt;&gt; x;
+cout << "Enter a number in the range of 1 through 10: "; cin
+>> x;
 
-} while ( x &lt; 1 || x &gt; 10);
+} while ( x < 1 || x > 10);
 
 8-29 do {
 
-cout &lt;&lt; "Enter A)dd W)ithdraw Q)uit: ";
+cout << "Enter A)dd W)ithdraw Q)uit: ";
 
-cin &gt;&gt; option; option = toupper(option);
+cin >> option; option = toupper(option);
 
 } while ( option != 'A' && option != 'W' && option != 'Q');
 
@@ -778,20 +778,20 @@ CHAPTER 9: FILE STREAMS
 
 9-1 // le name: THISPROG.CPP
 
-\#include &lt;fstream&gt; // for class ifstream
+\#include <fstream> // for class ifstream
 
-\#include &lt;iostream&gt; // for cout \#include &lt;string&gt;
+\#include <iostream> // for cout \#include <string>
 
 using namespace std;
 
 int main() { string aString; ifstream inFile("THISPROG.CPP"); for(int j
-= 1; j &lt;= 4; j++) { inFile &gt;&gt; aString;
+= 1; j <= 4; j++) { inFile >> aString;
 
-cout &lt;&lt; aString &lt;&lt; " ";
+cout << aString << " ";
 
 }
 
-cout &lt;&lt; endl; return 0;
+cout << endl; return 0;
 
 }
 
@@ -828,12 +828,12 @@ CHAPTER 10: VECTORS
 >
 > 10-4 0
 
-10-5 x\[0\] = 78; 10-6 int n = 100; for(int j = 0; j &lt; n; j++) {
+10-5 x\[0\] = 78; 10-6 int n = 100; for(int j = 0; j < n; j++) {
 x\[j\] = n-j;
 
 }
 
-10-7 for(j = 0; j &lt; n; j++) { cout &lt;&lt; x\[j\] &lt;&lt; endl;
+10-7 for(j = 0; j < n; j++) { cout << x\[j\] << endl;
 
 }
 
@@ -866,14 +866,14 @@ account\[13\] = BankAccount("Cust13", 1313.13);
 
 > 10-19 Th e 21st account on the 21st line of the fi le would not become
 > part of the account database. Th e vector size would not be big enough
-> and the loop would terminate because numberOfAccounts &lt;
+> and the loop would terminate because numberOfAccounts <
 > account.capacity() would be false.
 
-10-20 \#include &lt;iostream&gt;
+10-20 \#include <iostream>
 
-\#include &lt;fstream&gt; using namespace std; int main() {
+\#include <fstream> using namespace std; int main() {
 
-vector &lt;int&gt; vectorOfInts(1000);
+vector <int> vectorOfInts(1000);
 
 // File name will do if it is in the working directory
 
@@ -881,7 +881,7 @@ ifstream inFile("int.dat");
 
 int n = 0; int el;
 
-while( (inFile &gt;&gt; el) && (n &lt; vectorOfInts.capacity()) ) {
+while( (inFile >> el) && (n < vectorOfInts.capacity()) ) {
 
 vectorOfInts\[n\] = el; n++;
 
@@ -893,11 +893,11 @@ return 0;
 
 > 10-21 n
 
-10-22 cout &lt;&lt; "Number of meaningful ints in vectorOfInts is "
-&lt;&lt; n &lt;&lt; endl;
+10-22 cout << "Number of meaningful ints in vectorOfInts is "
+<< n << endl;
 
-cout &lt;&lt; "Here they are" &lt;&lt; endl; for(int j = 0; j &lt; n;
-j++) { cout &lt;&lt; j &lt;&lt; ". " &lt;&lt; vectorOfInts\[j\] &lt;&lt;
+cout << "Here they are" << endl; for(int j = 0; j < n;
+j++) { cout << j << ". " << vectorOfInts\[j\] <<
 endl;
 
 }
@@ -919,8 +919,8 @@ c.  4
         > means three extra assignments, but it is not worth worrying
         > about this special case.
 
-    27. double largest = x\[0\]; for(int j = 1; j &lt; n; j++) { if(
-        > x\[j\] &gt; largest ) largest = x\[j\]; }
+    27. double largest = x\[0\]; for(int j = 1; j < n; j++) { if(
+        > x\[j\] > largest ) largest = x\[j\]; }
 
     28. Th e vector is sorted and the binary search knows whether it is
         > either ascending or descending order.
@@ -938,18 +938,18 @@ Th erefore, the largest number of comparisons is 11.
 
 last = mid - 1; and
 
-rst = mid + 1; or change the expression if (searchString &lt; str\[mid\]
+rst = mid + 1; or change the expression if (searchString < str\[mid\]
 
 to
 
-if (str\[mid\] &lt; searchString) but NOT both changes.
+if (str\[mid\] < searchString) but NOT both changes.
 
 CHAPTER 11: GENERIC COLLECTIONS
 
 11-1 Any number can be used as long as the computer has more memory to
 grow the vector.
 
-11-2 cout &lt;&lt; intSet.size() &lt;&lt; endl;
+11-2 cout << intSet.size() << endl;
 
 11-3 intSet.insert(89);
 
@@ -963,7 +963,7 @@ b.  40
 
 c.  0
 
-11-7 \#include &lt;iostream&gt; using namespace std;
+11-7 \#include <iostream> using namespace std;
 
 \#include "Set.h" // For a generic Set class
 
@@ -971,7 +971,7 @@ c.  0
 
 int main() {
 
-Set&lt;BankAccount&gt; set; // Store a set of 4 BankAccounts
+Set<BankAccount> set; // Store a set of 4 BankAccounts
 set.insert(BankAccount("Chris", 300.00));
 set.insert(BankAccount("Devon", 100.00)); set.insert(BankAccount("Kim",
 444.44)); set.insert(BankAccount("Dakota", 99.99));
@@ -981,14 +981,14 @@ double largest = 0.0;
 set. rst(); // Initialize an iteration over all elements
 
 while (set.hasMore()) { double currentBalance =
-set.current().getBalance(); if (currentBalance &gt; largest) largest =
+set.current().getBalance(); if (currentBalance > largest) largest =
 currentBalance;
 
 set.next();
 
 }
 
-cout &lt;&lt; "Max balance is " &lt;&lt; largest &lt;&lt; endl; return
+cout << "Max balance is " << largest << endl; return
 0;
 
 }
@@ -999,7 +999,7 @@ CHAPTER 12: POINTERS AND MEMORY MANAGEMENT
 
 12-2 a. doublePtr
 
-b.  Can’t know. One run with cout &lt;&lt; & doublePtr;
+b.  Can’t know. One run with cout << & doublePtr;
     was 0x7fff5b44cc78.
 
 c.  1.23
@@ -1010,7 +1010,7 @@ d.  \*doublePtr += 1.0;
 
     4.  1
 
-    5.  a-&gt;getBalance() + b-&gt;getBalance();
+    5.  a->getBalance() + b->getBalance();
 
 > -or-
 
@@ -1023,7 +1023,7 @@ d.  \*doublePtr += 1.0;
 
 <!-- -->
 
-9.  cout &lt;&lt; \*p1 + \*p2 + \*p3 &lt;&lt;endl
+9.  cout << \*p1 + \*p2 + \*p3 <<endl
 
 10. p? 333
 
@@ -1039,7 +1039,7 @@ q? 333
 
 13. int array\[1000\];
 
-14. for(int i = 0; i &lt; 1000; i++) { array\[i\] = -1;
+14. for(int i = 0; i < 1000; i++) { array\[i\] = -1;
 
 }
 
@@ -1047,8 +1047,8 @@ q? 333
 
 10. **int** min = x\[0\];
 
-**int** max = x\[0\]; **for** (int i = 1; i &lt; n; i++) { **if**
-(x\[i\] &gt; max) max = x\[i\]; **if** (x\[i\] &lt; min) min = x\[i\];
+**int** max = x\[0\]; **for** (int i = 1; i < n; i++) { **if**
+(x\[i\] > max) max = x\[i\]; **if** (x\[i\] < min) min = x\[i\];
 
 }
 
@@ -1079,15 +1079,15 @@ if (n == 0) return false;
 
 // Get ptr to point to the last node
 
-node\* ptr = header; while (ptr-&gt;next != last) {
+node\* ptr = header; while (ptr->next != last) {
 
-ptr = ptr-&gt;next;
+ptr = ptr->next;
 
 }
 
 // Adjust last to the node before it, clean up memory, decrease size
 
-last = ptr; delete ptr-&gt;next;
+last = ptr; delete ptr->next;
 
 n--;
 
@@ -1101,9 +1101,9 @@ CHAPTER 13: VECTOR OF VECTORS
 
 13-2 matrix (or a vector of vectors)
 
-13-3 matrix&lt;double&gt; sales(10, 12);
+13-3 matrix<double> sales(10, 12);
 
-13-4 matrix&lt;double&gt; sales2(12, 10);
+13-4 matrix<double> sales2(12, 10);
 
 13-5 row
 
@@ -1116,8 +1116,8 @@ table\[row\]\[column\];
 
 }
 
-13-8 int Matrix::sum() { int result = 0; for (int i = 0; i &lt; rows;
-i++) { for (int j = 0; j &lt; columns; j++) {
+13-8 int Matrix::sum() { int result = 0; for (int i = 0; i < rows;
+i++) { for (int j = 0; j < columns; j++) {
 
 result += table\[i\]\[j\];
 
@@ -1140,7 +1140,7 @@ return result;
 >
 > 13-13 0 through 3
 
-13-14 for (int row = 0; row &lt; 3; row++) { for(int col = 0; col &lt;
+13-14 for (int row = 0; row < 3; row++) { for(int col = 0; col <
 4; col++) {
 
 a\[row\]\[col\] = 999;
@@ -1149,15 +1149,15 @@ a\[row\]\[col\] = 999;
 
 }
 
-13-15 for (int row = 0; row &lt; 3; row++) { for (int col = 0; col &lt;
+13-15 for (int row = 0; row < 3; row++) { for (int col = 0; col <
 4; col++) {
 
 cout.width(8);
 
-cout &lt;&lt; a\[row\]\[col\];
+cout << a\[row\]\[col\];
 
 }
 
-cout &lt;&lt; endl;
+cout << endl;
 
 }
